--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -27,7 +27,7 @@ Three other forms were found in the oracle bone script:
 ===Etymology===
 Of either {{inh|zh|sit-pro|-}} origin, compare
 * {{cog|bo|མདངས||facial color, appearance, brightness}} ({{zh-ref|Bodman, 1980}}), or
-* {{inh|zh|sit-pro|*brwaŋ||loud; bright}} (STDET); making it cognate with {{cog|my|ပြင်း||acute; violent}}.
+* {{inh|zh|sit-pro|*brwaŋ||loud; bright}} (STDET); making it cognate with {{cog|my|ပြင်း||acute; violent}}, {{cog|my|ပြောင်||to shine}}.
 Or from {{der|zh|aav}}, cognate with {{och-l|亮|bright}} ({{zh-ref|Schuessler, 2007}}). For more see {{och-l|[[亮]]}}.
 
 ===Pronunciation===
