/* Translations */ Added Latin translation of this word. <felt#57859984>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -64,6 +64,7 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*felta
 * Khmer: {{t+|km|សំបុក}}
 * Korean: {{t|ko|펠트}}
 * Kyrgyz: {{t|ky|кийиз}}
+* Latin: {{t|la|coactum|n}}
 * Luxembourgish: {{t|lb|Filz|m}}
 * Maori: {{t|mi|kirihuru}}
 * Mongolian: {{t+|mn|эсгий}}
