--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -239,7 +239,7 @@ From the above verb.
 {{trans-top|informal: annoyingly unpleasant person}}
 * Dutch: {{t+|nl|griezel|m}}, {{t+|nl|engerd|m}}
 * Finnish: {{t+|fi|nilkki}}, {{t|fi|karmio}}
-* German: {{t+|de|Knilch|m}}
+* German: {{t+|de|Knilch|m}}, {{t|de|Widerling|m}}
 {{trans-mid}}
 * Italian: {{t+|it|antipatico|m}}, {{t+|it|ruffiano}}, {{t+|it|lecchino}}
 * Spanish: {{t+|es|desgraciado|m}}
