--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -18,15 +18,15 @@
 =====Translations=====
 {{trans-top|simple past of come}}
 * Arabic: {{t|ar|جَاءَ|m}}, {{t+|ar|اَتَى|m}}
-*: Egyptian Arabic: {{t|arz|جيه|m|tr=ge|sc=Arab}}
+*: Egyptian Arabic: {{t|arz|جيه|m|tr=gē|sc=Arab}}
 * Italian: {{t+|it|venuto|m}}
 {{trans-mid}}
-* Macedonian: {{t|mk|дојде|tr=dójde|sc=Cyrl}}
+* Macedonian: {{t|mk|дојде}}
 * Scottish Gaelic: {{t|gd|thàinig}}
 {{trans-bottom}}
 
 {{trans-top|simple past of cum}}
-* Macedonian: {{t|mk|сврши|tr=sv'rši|sc=Cyrl}}
+* Macedonian: {{t|mk|сврши}}
 {{trans-mid}}
 {{trans-bottom}}
 
