/* Derived terms */ <libre#57866802>

--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -212,6 +212,7 @@ From {{inh|es|la|līber}}, from {{inh|es|itc-ola|loeber}}, from {{inh|es|itc-pro
 
 =====Derived terms=====
 {{col|es
+|aire libre
 |libremente
 |tiempo libre
 }}
