--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -126,7 +126,7 @@
 # [[informal]]
 
 ====Readings====
-* {{ja-readings|on=[[か]] (ka), [[け]] (ke)|kun=[[かり]] (kari)}}
+* {{ja-readings|on=か,け|kun=かり}}
 
 ----
 
