--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -91,6 +91,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 * Portuguese: {{t+|pt|carne|f}}
 * Romanian: {{t+|ro|carne|f}}
 * Russian: {{t+|ru|мягкая [[ткань]]|f}}, {{t+|ru|плоть|f}} {{qualifier|poetic}}, {{t+|ru|мясо|n}} {{qualifier|colloquial}}
+* Sanskrit: {{t+|sa|क्रव्य|n}}
 * Scottish Gaelic: {{t|gd|feòil|f}}
 * Slovene: {{t+|sl|meso|n}}
 * Spanish: {{t+|es|carne|f}}
