--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -92,6 +92,7 @@ From {{der|en|fro|founder}} (Modern French: {{m|fr|fonder}}), from {{der|en|la|f
 {{trans-mid}}
 * Khmer: {{t+|km|បង្កើត|tr=bɑŋkaət|sc=Khmr}}
 * Korean: {{t+|ko|설립하다}}, {{t+|ko|수립하다}}
+* Latin: {{t|la|fundō}]
 * Norwegian: {{t|no|grunnlegge}}
 * Occitan: {{t+|oc|fondar}}
 * Polish: {{t+|pl|założyć}}, {{t+|pl|zakładać}}
