--- a/en/型/型.13070.wikitext
+++ b/en/型/型.13070.wikitext
@@ -50,20 +50,20 @@
 
 # {{rfdef|ja|sort=土06}}
 
-===Noun===
-{{ja-noun|かた}}
-
-# {{lb|ja|martial arts}} [[choreograph]]ed [[training]] [[exercise]]s
-
 ====Readings====
 {{ja-readings
-|goon=ぎょう
+|goon=ぎょう<けう
 |kanon=けい
 |kun=かた-
 }}
 
 ====Compounds====
-* {{ja-r|模型|もけい}}
+* {{ja-r|模%型|も%けい}}
+
+===Noun===
+{{ja-noun|かた}}
+
+# {{lb|ja|martial arts}} [[choreograph]]ed [[training]] [[exercise]]s
 
 ====See also====
 * {{pedialite|lang=ja}}
