--- a/en/惹/惹.15629.wikitext
+++ b/en/惹/惹.15629.wikitext
@@ -4,8 +4,6 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=44336|canj=TKRP|ids=⿱若心}}
 
-# [[irritate]], [[vex]], [[offend]], [[incite]]
-
 ====References====
 * {{Han ref|kx=0393.010|dkj=10866|dj=0729.010|hdz=42309.010|uh=60F9|ud=24825|bh=B753|bd=46931}}
 
@@ -43,7 +41,9 @@
 ====Definitions====
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# to [[cause]] (problem); to [[court]]
+# to [[offend]]; to [[provoke]]; to [[irritate]]; to [[vex]]
+# to [[attract]]; to [[cause]] (reaction)
 
 ====Compounds====
 {{zh-der|惹口面|惹禍招殃|惹草沾花|思惹情牽|惹火燒身|意惹情牽|惹草黏花|惹麻煩|惹草粘花|惹草沾風|惹草拈花|惹罪招愆|惹禍招災|惹禍|惹眼|惹災招禍|惹惱|惹子|惹人憐愛|惹事|惹是招非|不惹氣|干惹|惹事招非|惹火|惹不起|惹是生非|惹氣|嘲惹|不好惹|惹惹|好惹|惹事生非|惹禍招愆|招惹|拈花惹草|招是惹非|招花惹草|招風惹雨|沾惹|沾風惹草|招風惹草|粘花惹絮|纏惹|絆惹|粘花惹草}}
