--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -1,13 +1,8 @@
-{{also|暎}}
 {{character info/new}}
 ==Translingual==
-{{Han compound|日|央|c1=s|c2=p|t1=sun|ls=psc}}.
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=64034|canj=ALBK|ids=⿰日央}}
-
-# to [[project]]
-# [[reflect]] [[light]]
 
 ====References====
 * {{Han ref|kx=0493.010|dkj=13838|dj=0856.010|hdz=21500.060|uh=6620|ud=26144|bh=AC4D|bd=44109}}
@@ -15,10 +10,11 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
+{{zh-forms|alt=暎}}
 
 ===Glyph origin===
 {{Han etym}}
+{{Han compound|日|央|c1=s|c2=p|t1=sun|ls=psc}}.
 
 ===Pronunciation 1===
 {{zh-pron
@@ -30,13 +26,17 @@
 |mc=2
 |oc=2
 |ma=Zh-yìng.ogg
-|cat=v
+|cat=v,n
 }}
 
 ====Definitions====
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# to [[reflect]] (light); to [[mirror]]; to [[shine]]
+# to [[project]] ([[movie]])
+# {{†}} [[sunshine]]; [[sunlight]]
+# {{†}} to [[cover]]; to [[hide]]
+# {{†}} the [[hour]]s of the [[goat]] (1:00pm to 3:00pm)
 
 ===Pronunciation 2===
 {{zh-pron
@@ -49,7 +49,7 @@
 ====Definitions====
 {{zh-hanzi}}
 
-# {{zh-only|映㬒}}
+# {{zh-hg}} {{zh-only|映㬒|[[not]] [[bright]]; [[not]] [[clear]]}}
 
 ===Compounds===
 {{zh-der|反映|放映|上映|映襯|映山紅|映射|映衰|映托|映現|映像|映眼|映照|倒映|交映|展映|後先輝映|交相輝映|孫康映雪|疊映|放映室|映媚|放映影幕|映輝|映身|相映成趣|相映|播映|映帶|掩映生姿|照映|放映機|映摹|映壁|映雪囊螢|映像管|照螢映雪|暉映:huīyìng|映雪讀書|映雪|映月讀書|掩映|首映|開映|聚螢映雪|首映典禮|集螢映雪|襯映|遮天映日|輝映|餘映|蔚映|映望}}
