--- a/en/坵/坵.13048.wikitext
+++ b/en/坵/坵.13048.wikitext
@@ -34,7 +34,7 @@
 #: {{zh-syn|塊|畦}}
 
 ====Compounds====
-{{zh-der|烏坵/乌丘|坵荒/丘荒|大坵}}
+{{zh-der|烏坵/乌丘|坵荒/丘荒|大坵|小坵}}
 
 ===Etymology 2===
 {{zh-see|坻|v}}
