/* English */ <United States of America#57926118>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -104,7 +104,7 @@
 * Interlingua: {{t|ia|Statos Unite de America}}
 * Interlingue: {{t|ie|Unit States de America}}
 * Inuktitut: {{t|iu|ᐊᒥᐊᓕᑲ}}
-* Inupiak: {{t|ik|United States of America}}, {{t|ik|Tannapta nunaŋat}}
+* Inupiaq: {{t|ik|United States of America}}, {{t|ik|Tannapta nunaŋat}}
 * Irish: {{t|ga|Stáit Aontaithe Mheiriceá}}, {{t+|ga|Meiriceá}}
 * Italian: {{t+|it|Stati Uniti d'America|m-p}}, {{t+|it|Stati Uniti|m-p}}, {{t|it|SUA}}
 * Japanese: {{t+|ja|アメリカ合衆国|tr=Amerika Gasshūkoku}}, {{t+|ja|米国|tr=Beikoku}}, {{t+|ja|米|alt=米-|tr=Bei-}}, {{t+|ja|アメリカ|tr=Amerika}}
