--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -114,7 +114,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Spanish: {{t+|es|costar}}
 * Swahili: {{t+|sw|gharimu}}
 * Swedish: {{t+|sv|kosta|c}}
-* Thai: {{t+|th|ราคา}}
+* Thai: {{t+|th|ราคา}} {{attention|th|Is this really a verb too? In its own page it's only listed as a noun. It's not even listed in the noun section on this page.}}
 * Tibetan: {{t|bo|གནད}}
 * Turkish: {{t|tr|fiyatı olmak}}
 * Tuvan: {{t-needed|tyv}}
