--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -45,7 +45,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 =====Translations=====
 {{trans-top|to incur a charge, a price}}
 * Abkhaz: {{t-needed|ab}}
-* Arabic: {{t|ar|سَاوَى}}, {{t|ar|ﻛَﻠَّﻒَ}}
+* Arabic: {{t|ar|سَاوَى}}, {{t|ar|كَلَّفَ}}
 * Armenian: {{t+|hy|արժենալ}}, {{t|hy|արժեմ}}
 * Asturian: {{t|ast|costar}}
 * Avar: {{t-needed|av}}
@@ -79,7 +79,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Irish: {{t|ga|cosain}}
 * Istriot: {{t|ist|custà}}
 * Italian: {{t+|it|costare}}
-* Japanese: {{t+|ja|費やす|tr=[[ついやす]], tsuiyasu}}, {{t+|ja|掛かる|tr=kakaru}}
+* Japanese: {{t+|ja|費やす|tr=ついやす, tsuiyasu}}, {{t+|ja|掛かる|tr=kakaru}}
 * Kannada: {{t+|kn|ಬೀರು|sc=Knda}}
 * Khmer: {{t-needed|km}}
 * Korean: {{t+|ko|들다}}
