--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -52,7 +52,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Bashkir: {{t|ba|тороу}}
 * Basque: {{t|eu|kostatu}}
 * Belarusian: {{t|be|каштава́ць|impf|sc=Cyrl}}
-* Bulgarian: {{t+|bg|стру́вам|impf}}
+* Bulgarian: {{t+|bg|стру́вам|impf}}, {{t|bg|ко́ствам|impf}}
 * Catalan: {{t+|ca|costar}}
 * Chechen: {{t-needed|ce}}
 * Chinese:
