--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -151,6 +151,7 @@
 * Ossetian: {{t|os|Америкӕйы Иугонд Штаттӕ}}
 * Palauan: {{t|pau|Merikel}}
 * Pashto: {{t|ps|د امريکا متحده ايالات|tr=də amrīkā mutaḥidâ iyālāt}}
+* Pennsylvania German: {{t|pdc|Vereenichde Schtaate vun Amerikaa}}
 * Persian: {{t|fa|ایالات متحده آمریکا|tr=eyâlât-e mottahede-ye âmrikâ|alt=ایالات متحدۀ آمریکا}}, {{t+|fa|آمریکا|tr=âmrikâ}}
 * Plains Cree: {{t|crk|kihci-môhkomân-askîhk}}
 * Polish: {{t+|pl|Stany Zjednoczone Ameryki|m-in-p}}, {{t+|pl|USA|n|m-in-p}}
