--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -4,7 +4,7 @@
 * {{l|en|blond}}
 
 ===Etymology===
-From {{etyl|frm|en}} {{m|fr|blonde|g=f}}. See {{m|en|blond}}.
+From {{der|en|frm|-}} {{m|fr|blonde|g=f}}. See {{m|en|blond}}.
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|en|/blɒnd/}}
