--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -133,6 +133,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 {{trans-bottom}}
 
 {{trans-top|a find, in particular a boyfriend/girlfriend}}
+* Bulgarian: {{t+|bg|хващане|n}}
 * Danish: {{t|da|fangst|c}}
 * Dutch: {{t+|nl|vangst|f}}
 * Estonian: {{t+|et|leid}}
@@ -179,6 +180,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 {{trans-bottom}}
 
 {{trans-top|that which is captured or caught}}
+* Bulgarian: {{t|bg|улов|m}}
 * Catalan: {{t+|ca|captura|f}}
 * Danish: {{t|da|fangst|c}}
 * Dutch: {{t+|nl|vangst|f}}
@@ -201,7 +203,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 {{trans-bottom}}
 
 {{trans-top|the act of noticing, understanding or hearing}}
-* Bulgarian: {{t+|bg|разбиране|n}}
+* Bulgarian: {{t+|bg|разбиране|n}}, {{t+|bg|схващане|n}}
 * Finnish: {{t+|fi|huomio}}
 {{trans-mid}}
 * Italian: {{t+|it|colpo|m}}
@@ -347,6 +349,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 * Assamese: {{t|as|ধৰ}}, {{t|as|আয়ত্ত কৰা}}
 * Belarusian: {{t|be|лаві́ць|impf}}, {{t|be|злаві́ць|pf}}, {{t|be|залаві́ць|pf}}
 * Bengali: {{t|bn|ধরা}}
+* Bulgarian: {{t+|bg|хващам}}, {{t+|bg|улавям}}
 * Burmese: {{t+|my|ဖမ်း|sc=Mymr}}
 * Chinese:
 *: Cantonese: {{t|yue|捉|tr=zuk1|sc=Hani}}
@@ -453,6 +456,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 {{trans-bottom}}
 
 {{trans-top|to contract a disease or illness}}
+* Bulgarian: {{t+|bg|хващам}}
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
 * Danish: {{t+|da|få}}
