--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -108,9 +108,8 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 ===Alternative forms===
 * {{l|la|e. g.}}
 
-===Abbreviation===
-{{rfc-header|la|Abbreviation}}
-{{head|la|abbreviation}} (by [[justification]])
+===Adverb===
+{{head|la|adverb}} (by [[justification]])
 
 # [[exempli gratia|exemplī grātiā]] ("[[for the sake of]] an [[example]], [[for example]]")
 #* '''1732''' (MDCCXXXII), Antonius Mayr, ''Theologia Scholastica'', Ingolstadium, page 55, by justification:
