add id to [[-en]] in affix template (via JWB) <flaxen#57955947>

--- a/en/f/flaxen.6882.wikitext
+++ b/en/f/flaxen.6882.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{inh|en|enm|flaxen}}, {{m|enm|flexon}}, {{m|enm|flexin}}, from {{inh|en|ang|fleaxen|t=of flax; flaxen}}, equivalent to {{af|en|flax|-en|t2=made of}}.
+From {{inh|en|enm|flaxen}}, {{m|enm|flexon}}, {{m|enm|flexin}}, from {{inh|en|ang|fleaxen|t=of flax; flaxen}}, equivalent to {{af|en|flax|-en|id2=made of|t2=made of}}.
 
 ===Pronunciation===
 * {{IPA|en|/ˈflæk.sən/}}
