t+uk:[[შუკატჷ]] ([[WT:EDIT|Assisted]]) <found#57961203>

--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -106,6 +106,7 @@ From {{der|en|fro|founder}} (Modern French: {{m|fr|fonder}}), from {{der|en|la|f
 * Spanish: {{t+|es|fundar}}
 * Swedish: {{t+|sv|grunda}}
 * Turkish: {{t+|tr|kurmak}}
+* Ukrainian: {{t|uk|შუკატჷ}}
 * Volapük: {{t-needed|vo}}
 {{trans-bottom}}
 
