--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -648,7 +648,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 #: {{ux|en|Look at this '''cut''' on my finger!}}
 # A notch, passage, or channel made by cutting or digging; a furrow; a groove.
 #: {{ux|en|a '''cut''' for a railroad}}
-#* Knolles
+#* {{rfdatek|en|Knolles}}
 #*: This great '''cut''' or ditch Secostris {{...}} purposed to have made a great deal wider and deeper.
 ## An artificial [[navigation]] as distinguished from a [[navigable]] river
 # A [[share]] or [[portion]].
@@ -665,13 +665,13 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 # {{lb|en|card games}} The card obtained by dividing the pack.
 # The manner or style a garment etc. is fashioned in.
 #: {{ux|en|I like the '''cut''' of that suit.}}
-#* Shakespeare
+#* {{rfdatek|en|Shakespeare}}
 #*: with eyes severe and beard of formal '''cut'''
 # A [[slab]], especially of meat.
 #: {{ux|en|That’s our finest '''cut''' of meat.}}
 # {{lb|en|fencing}} An attack made with a chopping motion of the blade, landing with its edge or point.
 # A deliberate [[snub]], typically a refusal to return a [[bow]] or other acknowledgement of acquaintance.
-#* Washington Irving
+#* {{rfdatek|en|Washington Irving}}
 #*: Rip called him by name, but the cur snarled, snapped his teeth, and passed on. This was an unkind '''cut''' indeed.
 # An [[unkind]] act; a [[cruelty]].
 # A definable part, such as an individual [[song]], of a [[recording]], particularly of [[commercial]] records, [[audio]] [[tape]]s, [[CD]]s, etc.
