--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -37,8 +37,8 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 #* '''2004''', Chris Weston, ''500 Digital Photography Hints, Tips, and Techniques'':
 #*: There's nothing more annoying than taking a great picture, only to find that the horizon isn't '''straight'''.
 # {{lb|en|obsolete}} [[stretched|Stretched]] out; fully [[extended]]. {{defdate|15<sup>th</sup>-16<sup>th</sup>c.}}
-# {{lb|en|obsolete|rare}} [[strait|Strait]]; [[narrow]].
-#* Sir {{w|John Mandeville}} (c.1350)
+# {{rfv-sense|en}} {{lb|en|obsolete|rare}} [[strait|Strait]]; [[narrow]].
+#* {{rfdatek|en||Sir {{w|John Mandeville}}}}
 #*: Egypt is a long country, but it is '''straight''', that is to say, narrow.
 # Free from [[dishonesty]]; [[honest]], law-abiding. {{defdate|from 16th c.}}
 #* '''1879''', {{w|Anthony Trollope}}, ''John Caldigate'':
