/* Derived terms */ <push#57972193>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -79,6 +79,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 {{der3|en|title=Terms derived from ''push'' (verb)
 <!--"give someone the push-off" is derived from "push off"-->
 |[[pushbike]], [[push-bike]]
+|[[push button]], [[push-button]], [[pushbutton]]
 |pusher
 |pushful
 |pushover
