--- a/en/慍/慍.15712.wikitext
+++ b/en/慍/慍.15712.wikitext
@@ -32,8 +32,10 @@
 # {{lb|zh|literary}} to be [[angry]]; to [[resent]]
 #* {{zh-x|人 不知 而 不 慍 ，不亦 君子 乎 ？|Is he not a man of complete virtue, who feels no '''discomposure''' though men may take no note of him?|ref=Analects}}
 
-===Compounds===
+====Compounds====
 {{zh-der|慍懟|慍容|慍色|慍羝|慍恚|慍怒|解慍}}
+
+{{zh-cat|Emotions}}
 
 ----
 
