--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -339,7 +339,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 
 # {{l|en|Israel}}
 # {{l|en|Israel}}, another name of the patriarch [[Jacob]]
-#* Lutherbibel 1912, 1.Mose 32, 29 (Luther Bible 1912, Genesis 32:29):
+#* {{rfdate|de}} Lutherbibel 1912, 1.Mose 32, 29 (Luther Bible 1912, Genesis 32:29):
 #*: Er sprach: Du sollst nicht mehr Jakob heißen, sondern '''Israel'''; denn du hast mit Gott und mit Menschen gekämpft und bist obgelegen.
 
 ====Synonyms====
