--- a/en/感/感.15666.wikitext
+++ b/en/感/感.15666.wikitext
@@ -15,7 +15,7 @@
 ----
 
 ==Chinese==
-{{zh-forms|alt=⿱干心:second-round simplified}}
+{{zh-forms|alt=𫹯:second-round simplified}}
 
 ===Glyph origin===
 {{Han etym}}
