--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -19,16 +19,14 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 # {{lb|en|intransitive}} To be of [[significance]]; to [[matter]].
 #: {{ux|en|Your views don't '''count''' here.&nbsp;&nbsp; It does '''count''' if you cheat with someone when you're drunk.}}
 # {{lb|en|intransitive}} To be an [[example]] of something: {{n-g|often followed by {{m|en|as}} and an indefinite noun}}.
-#* J. A. Symonds
+#* {{rfdatek|en|J. A. Symonds}}
 #*: This excellent man {{...}} '''counted''' among the best and wisest of English statesmen.
-#* {{quote-journal|en|date=2013-08-03|volume=408|issue=8847|magazine={{w|The Economist}}
-|title=[http://www.economist.com/news/finance-and-economics/21582498-america-has-changed-way-it-measures-gdp-boundary-problems Boundary problems]
-|passage=Economics is a messy discipline: too fluid to be a science, too rigorous to be an art. Perhaps it is fitting that economists’ most-used metric, gross domestic product (GDP), is a tangle too.{{...}}But as a foundation for analysis it is highly subjective: it rests on difficult decisions about what '''counts''' as a territory, what '''counts''' as output and how to value it. Indeed, economists are still tweaking it.}}
+#* {{quote-journal|en|date=2013-08-03|volume=408| issue=8847| magazine={{w|The Economist}}| title=[http://www.economist.com/news/finance-and-economics/21582498-america-has-changed-way-it-measures-gdp-boundary-problems Boundary problems]| passage=Economics is a messy discipline: too fluid to be a science, too rigorous to be an art. Perhaps it is fitting that economists’ most-used metric, gross domestic product (GDP), is a tangle too.{{...}}But as a foundation for analysis it is highly subjective: it rests on difficult decisions about what '''counts''' as a territory, what '''counts''' as output and how to value it. Indeed, economists are still tweaking it.}}
 #: {{ux|en|Apples '''count''' as a type of fruit.}}
 # {{lb|en|transitive}} To [[consider]] something an example of something.
 #: {{ux|en|He '''counts''' himself a hero after saving the cat from the river.&nbsp;&nbsp; I '''count''' you as more than a friend.}}
 # {{lb|en|obsolete}} To take account or note (of).
-#* {{quote-book|en|year=c. 1589–1593|first=William|last=Shakespeare|authorlink=William Shakespeare|title={{w|The Two Gentlemen of Verona}}|line=37|passage=No man '''counts''' of her beauty.}}
+#* {{quote-book|en|year=c. 1589–1593|first=William| last=Shakespeare| authorlink=William Shakespeare| title={{w|The Two Gentlemen of Verona}}| line=37| passage=No man '''counts''' of her beauty.}}
 # {{lb|en|UK|legal}} To plead orally; to argue a matter in court; to recite a count.
 #: {{rfquotek|en|Burrill}}
 
