--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -106,17 +106,7 @@ See the usage notes in the entry {{m|en|blond}}.
 ===Adjective===
 {{head|de|adjective form}}
 
-# {{de-form-adj|s|f|n|blond|nocat=1}}
-# {{de-form-adj|s|f|a|blond|nocat=1}}
-# {{de-form-adj|s|p|n|blond|nocat=1}}
-# {{de-form-adj|s|p|a|blond|nocat=1}}
-# {{de-form-adj|w|m|n|blond|nocat=1}}
-# {{de-form-adj|w|f|n|blond|nocat=1}}
-# {{de-form-adj|w|f|a|blond|nocat=1}}
-# {{de-form-adj|w|n|n|blond|nocat=1}}
-# {{de-form-adj|w|n|a|blond|nocat=1}}
-# {{de-form-adj|m|f|n|blond|nocat=1}}
-# {{de-form-adj|m|f|a|blond|nocat=1}}
+# {{inflection of|de|blondee||str//mix|nom//acc|f|s|;|str|nom//acc|p|;|wk|nom|all-gender|s|;|wk|acc|f//n|s}}
 
 ----
 
