--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -9,7 +9,7 @@
 * {{rhymes|en|ɛlt}}
 
 ===Etymology 1===
-From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*feltaz}} (compare {{cog|nl|vilt}}, {{cog|de|Filz}}, {{cog|da|filt}}, {{cog|fr|feutre}}), from {{der|en|ine-pro|*pilto}}, {{m|ine-pro|*pilso}} 'felt' (compare {{cog|la|pilleus||felt}} (adj.), {{cog|cu|плъсть|tr=plŭstĭ}}, {{cog|sq|plis}}, Ancient Greek {{m|grc|πῖλος}}), from *''pel-'' 'to beat'. More at [[anvil]].
+From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*feltaz}} (compare {{cog|nl|vilt}}, {{cog|de|Filz}}, {{cog|da|filt}}, {{cog|fr|feutre}}), from {{der|en|ine-pro|*pilto}}, {{m|ine-pro|*pilso}} 'felt' (compare {{cog|la|pilleus||felt}} (adj.), {{cog|cu|плъсть}}, {{cog|sq|plis}}, Ancient Greek {{m|grc|πῖλος}}), from *''pel-'' 'to beat'. More at [[anvil]].
 
 ====Noun====
 {{wikipedia}}
