--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -74,7 +74,7 @@ Proto-{{w|Kiranti languages|Kiranti}} {{m|und|*saŋ||star}} either develops from
 {{zh-dial|星星}}
 
 ===Compounds===
-{{zh-der|星期:days of the week|星期一:Monday|星期二:Tuesday|星期三:Wednesday|星期四:Thursday|星期五:Friday|星期六:Saturday|星期日:Sunday|星期天:Sunday|星辰|星斗|星光|星漢|星號|星河|星火|星火燎原|星際|星空|星羅棋布|星落雲散|星球|星術|星霜|星體|星圖|星團|星系|星系核|星相|星象|星星|星星點點|星星之火，可以燎原|星宿|星眼|星夜|星移斗轉|星移物換|星雲|星子|海星|一天星斗|一星兒|一星子|一星星|一路福星|七星|七星壇|七星山|七星板|七星燈|七星瓢蟲|三星|中星|中星儀|主序星|主星|九大行星|五星|五星上將|五星連珠|井中視星|人造衛星|伴星|使星|侵星|值星|值星官|偵察衛星|傳播衛星|內行星|冒金星兒|冥王星|分星擘兩|列星|剋星|劍眉星眼|北斗七星|北極星|半星|南極星沉|南極星輝|占星|占星術|吉星文|吉星高照|同步衛星|周期彗星|哈雷彗星|唾沫星子|喪門星|嘎巴流星|四星|土星|坍縮星|壽星|壽星老兒|外星人|外行星|夜叉星|大明星|大星殞落|大步流星|大熊星座|大犬星座|大行星|天南星|天狼星|天王巨星|天王星|天罡星|天貴星|天關客星|天關星|天鵝星座|天鷹星座|太白星|太白酒星|太白金星|太陰星|奎星高照|奔星|女星|妖星|孤星淚|宋應星|官星|官星透露|定盤星|客星|寒星|寥若晨星|寶星|將星|導航衛星|小星|小熊星座|小行星|巨星|帚星|帝星|帶月披星|彗星|影星|急如星火|急於星火|恆星|恆星年|恆星日|恆星月|恆星系|恆星週期|恩星照命|惑星|戴星|戴月披星|披星帶月|披星戴月|拱極星|指極星|掃帚星|掃星|掩星|摘星|摘星樓|擘兩分星|救星|文昌星|文星和合|文曲星|文章星斗|斗轉星移|新星|明星|昏星|星主|星使|星光列車|星兒|星前月下|星君|星命|星士|星奔|星媽|星官|星家|星宿海|星座|星形|星彩|星戰計畫|星探|星散|星族|星旗|星旗電戟|星星之火|星曆|星曆錶|星月交輝|星期報|星條旗|星橋|星次|星歲|星氣|星洲|星流|星燭|星盤|星眸|星眸皓齒|星等|星算|星羅雲布|星羅雲散|星群|星色|星芒狀|星蟲|星行|星行夜歸|星表|星言夙駕|星迴|星速|星降|星院|星陳夙駕|星隕|星際塵埃|星際大戰|星際微塵|星際物質|星雞魚|星離雨散|星飛電掣|星馳|星馳電發|星馳電走|星駕|星鯊|星點彈塗|星點河魨|昭如日星|晨星|晨炊星飯|景星|景星勛章|景星慶雲|智多星|暫星|曉星|曙後星孤|月明星稀|月眉星眼|月約星期|月落星沉|木星|本命星|桃花星|棋布星羅|棋羅星布|橢圓星系|櫺星門|歌星|武曲星|歲星|毛頭星|氣象衛星|水星|沒星秤|河外星系|油星|流星|流星報馬|流星趕月|流星鎚|流星雨|流星馬|海事衛星|海王星|測量衛星|港星|準星|滿天星|滿眼金星|漏星堂|漩渦星雲|潢星|火德星君|火星|火星塞|炳如日星|炳若日星|煙飛星散|煞星|熠熠紅星|燎星|爆發星|物換星移|牽牛星|獵戶星座|球狀星團|瓦解星散|瓦解星飛|甲第星羅|男星|畢宿星團|畢拉彗星|發射星雲|白矮星|白虎星|百武彗星|皓齒星眸|目似明星|目若朗星|直播衛星|眼若流星|眾星拱北|眾星拱月|眾星拱辰|眾星捧月|矮星|矮行星|視星等|福星|福星高照|秤星|移星換斗|穀神星|童星|紅星|紇剌星|經星|繁星|織女星|羅福星|老人星|老壽星|聚星|脈動星|脈衝星|花星|蟹狀星雲|行星|行星儀|行星風|衛星|衛星國家|衛星導航|衛星日蝕|衛星轉播|衛星通信|衛星都市|衛星門診|衛星雲圖|衛星電視|衛星食|變光星|變星|豔星|賊仔星|賊星|超巨星|超新星|辰星|追星族|追星趕月|通信衛星|通訊衛星|酒星|醫卜星相|金星|鈴鐺壽星|鎮星|隕星|雙星|雨零星散|零星|零零星星|電卷星飛|電影明星|電掣星馳|順星|類地行星|類新星|類星體|類木行星|魁星|魔星|鱗鋏星鐔|星章|星道|七星臺|平星|七星岩|災星|星風}}
+{{zh-der|星期:days of the week|星期一:Monday|星期二:Tuesday|星期三:Wednesday|星期四:Thursday|星期五:Friday|星期六:Saturday|星期日:Sunday|星期天:Sunday|星辰|星斗|星光|星漢|星號|星河|星火|星火燎原|星際|星空|星羅棋布|星落雲散|星球|星術|星霜|星體|星圖|星團|星系|星系核|星相|星象|星星|星星點點|星星之火，可以燎原|星宿|星眼|星夜|星移斗轉|星移物換|星雲|星子|海星|一天星斗|一星兒|一星子|一星星|一路福星|七星|三星|中星|中星儀|主序星|主星|九大行星|五星|五星上將|五星連珠|井中視星|人造衛星|伴星|使星|侵星|值星|值星官|偵察衛星|傳播衛星|內行星|冒金星兒|冥王星|分星擘兩|列星|剋星|劍眉星眼|北斗七星|北極星|半星|南極星沉|南極星輝|占星|占星術|吉星文|吉星高照|同步衛星|周期彗星|哈雷彗星|唾沫星子|喪門星|嘎巴流星|四星|土星|坍縮星|壽星|壽星老兒|外星人|外行星|夜叉星|大明星|大星殞落|大步流星|大熊星座|大犬星座|大行星|天南星|天狼星|天王巨星|天王星|天罡星|天貴星|天關客星|天關星|天鵝星座|天鷹星座|太白星|太白酒星|太白金星|太陰星|奎星高照|奔星|女星|妖星|孤星淚|宋應星|官星|官星透露|定盤星|客星|寒星|寥若晨星|寶星|將星|導航衛星|小星|小熊星座|小行星|巨星|帚星|帝星|帶月披星|彗星|影星|急如星火|急於星火|恆星|恆星年|恆星日|恆星月|恆星系|恆星週期|恩星照命|惑星|戴星|戴月披星|披星帶月|披星戴月|拱極星|指極星|掃帚星|掃星|掩星|摘星|摘星樓|擘兩分星|救星|文昌星|文星和合|文曲星|文章星斗|斗轉星移|新星|明星|昏星|星主|星使|星光列車|星兒|星前月下|星君|星命|星士|星奔|星媽|星官|星家|星宿海|星座|星形|星彩|星戰計畫|星探|星散|星族|星旗|星旗電戟|星星之火|星曆|星曆錶|星月交輝|星期報|星條旗|星橋|星次|星歲|星氣|星洲|星流|星燭|星盤|星眸|星眸皓齒|星等|星算|星羅雲布|星羅雲散|星群|星色|星芒狀|星蟲|星行|星行夜歸|星表|星言夙駕|星迴|星速|星降|星院|星陳夙駕|星隕|星際塵埃|星際大戰|星際微塵|星際物質|星雞魚|星離雨散|星飛電掣|星馳|星馳電發|星馳電走|星駕|星鯊|星點彈塗|星點河魨|昭如日星|晨星|晨炊星飯|景星|智多星|暫星|曉星|曙後星孤|月明星稀|月眉星眼|月約星期|月落星沉|木星|本命星|桃花星|棋布星羅|棋羅星布|橢圓星系|櫺星門|歌星|武曲星|歲星|毛頭星|氣象衛星|水星|沒星秤|河外星系|油星|流星|流星報馬|流星趕月|流星鎚|流星雨|流星馬|海事衛星|海王星|測量衛星|港星|準星|滿天星|滿眼金星|漏星堂|漩渦星雲|潢星|火德星君|火星|火星塞|炳如日星|炳若日星|煙飛星散|煞星|熠熠紅星|燎星|爆發星|物換星移|牽牛星|獵戶星座|球狀星團|瓦解星散|瓦解星飛|甲第星羅|男星|畢宿星團|畢拉彗星|發射星雲|白矮星|白虎星|百武彗星|皓齒星眸|目似明星|目若朗星|直播衛星|眼若流星|眾星拱北|眾星拱月|眾星拱辰|眾星捧月|矮星|矮行星|視星等|福星|福星高照|秤星|移星換斗|穀神星|童星|紅星|紇剌星|經星|繁星|織女星|羅福星|老人星|老壽星|聚星|脈動星|脈衝星|花星|蟹狀星雲|行星|行星儀|行星風|衛星|衛星國家|衛星導航|衛星日蝕|衛星轉播|衛星通信|衛星都市|衛星門診|衛星雲圖|衛星電視|衛星食|變光星|變星|豔星|賊仔星|賊星|超巨星|超新星|辰星|追星族|追星趕月|通信衛星|通訊衛星|酒星|醫卜星相|金星|鈴鐺壽星|鎮星|隕星|雙星|雨零星散|零星|零零星星|電卷星飛|電影明星|電掣星馳|順星|類地行星|類新星|類星體|類木行星|魁星|魔星|鱗鋏星鐔|星章|星道|七星臺|平星|七星岩|災星|星風}}
 
 {{zh-cat|Astronomy}}
 
@@ -85,8 +85,6 @@ Proto-{{w|Kiranti languages|Kiranti}} {{m|und|*saŋ||star}} either develops from
 ===Kanji===
 {{ja-kanji|grade=2|rs=日05}}
 
-# [[star]]
-
 ====Readings====
 {{ja-readings
 |goon=しょう<しやう
@@ -95,34 +93,20 @@ Proto-{{w|Kiranti languages|Kiranti}} {{m|und|*saŋ||star}} either develops from
 }}
 
 ====Compounds====
-{{der-top|Compounds}}
-* {{ja-r|準星|じゅんせい}}: [[quasar]]
-* {{ja-r|星霜|せいそう}}
-* {{ja-r|星芒|せいぼう}}
-* {{ja-r|星人|せいじん}}
+{{der-top3|Compounds}}
 * {{ja-r|明星|みょうじょう}}
-* {{ja-r|星辰|せいしん}}
-* {{ja-r|星宿|せいしゅく}}
-{{der-mid}}
-* {{ja-r|星雲|せいうん}}: {{q|astronomy}} [[nebula]]
-* {{ja-r|星団|せいだん}}: {{q|astronomy}} [[cluster]]
-* {{ja-r|巨星|きょせい}}: {{q|astronomy}} [[giant]]
-* {{ja-r|恒星|こうせい}}: {{q|astronomy}} [[star]]
-* {{ja-r|連星|れんせい}}: {{q|astronomy}} [[binary star]]
-* {{ja-r|遊星|ゆうせい}}: {{q|archaic}} [[planet]]
-* {{ja-r|惑星|わくせい}}: {{q|astronomy}} [[planet]]
-* {{ja-r|矮星|わいせい}}: {{q|astronomy}} [[dwarf]]
-* {{ja-r|星体|せいたい}}: {{q|astronomy}} [[star]] [[body]]
-* {{ja-r|星座|せいざ}}: {{q|astronomy}} [[constellation]]
-* {{ja-r|流星|りゅうせい}}: {{q|astronomy}} [[meteor]]
-* {{ja-r|彗星|すいせい}}: {{q|astronomy}} [[comet]]
+* {{ja-r|満天星|ドウダン-ツツジ}}
+* {{ja-r|海星|ヒトデ}}
+* {{ja-r|夕星|ゆうつづ}}
 {{der-bottom}}
 
 ===Etymology 1===
 {{ja-kanjitab|ほし|yomi=k}}
-{{IPAchar|/posi/}} → {{IPAchar|/fosi/}} → {{IPAchar|/hoɕi/}}
+{{wp|lang=ja}}
+{{wp|Star}}
+{{IPAchar|/posi/}} → {{IPAchar|/ɸoɕi/}} → {{IPAchar|/hoɕi/}}
 
-From {{inh|ja|ojp|sort=ほし|-}}, from {{inh|ja|jpx-pro|sort=ほし|*pəsi}}. Found in the ''{{w|Man'yōshū}}'', completed some time after 759 CE.<ref name="MYS">{{RQ:Manyoshu|15|3657}}, text [http://jti.lib.virginia.edu/japanese/manyoshu/Man15Yo.html#3657 here]</ref>
+From {{inh|ja|ojp|sort=ほし|-}}.
 
 ====Pronunciation====
 {{ja-pron|yomi=k|ほし|acc=0|acc_ref=DJR,NHK}}
@@ -130,86 +114,77 @@ From {{inh|ja|ojp|sort=ほし|-}}, from {{inh|ja|jpx-pro|sort=ほし|*pəsi}}. F
 ====Noun====
 {{ja-noun|ほし}}
 
-# a [[star]]
-#: {{ja-usex|数え切れないくらいたくさんの'''星'''が輝いている|かぞえきれない くらい たくさん の '''ほし''' が かがやいて いる|an endless number of '''stars''' are shining}}
-#* {{quote-book|ja|date=May 2 2014|||publisher={{w|Wizards of the Coast}}|{{lj|ニクスへの旅}}|chapter={{lj|レオニンの[偶](ぐう)[像](ぞう)[破](は)[壊](かい)[者](しゃ)}}|trans-chapter=Leonin Iconoclast|||trans-title=Journey into Nyx}}
-#*: {{ja-usex|「'''星%々'''は夜%空にあるべきです。ここは我%々の世%界。そして我%々の事は我%々が決めます。」|「'''^ほし%ぼし''' は よ%ぞら に ある べき です。^ここ は われ%われ の せ%かい。^そして われ%われ の こと は われ%われ が きめます。」|“The stars belong in the night sky. This is our world. And we take matters into our own hands.”}}
+# a [[star]] {{gl|[[luminous]] [[celestial body]]}}
+#: {{syn|ja|恒星|tr=kōsei}}
+# a star {{gl|[[concave]] [[polygon]] with [[regular]], [[pointy]] [[protrusion]]s and [[indentation]]s, ''espeically'' used as a [[symbol]] to [[rate]] [[quality]]}}
 # {{lb|ja|sort=ほし|tarot}} the [[star|Star]]
-# {{lb|ja|loosely}} {{syn of|ja|天体|tr=tentai||[[celestial body]]}}
-#* {{quote-book|ja
-||
-|{{wj|美少女戦士セーラームーン|[美少女戦士](Pretty Guardian)[セーラームーン](SAILORMOON)}}
-||181–183
-|last=Takeuchi
-|first=Naoko
-|authorlink=Naoko Takeuchi
-|chapter={{lj|[Act](アクト) [29](トゥエンティナイン)　[無](む)[限](げん)[３](スリー)　[２人](ふたり) [NEW](ニュー) [SOLDIERS](ソルジャーズ)}}
-|trans-chapter=Act 29: Infinity 3: 2 NEW SOLDIERS
-|trans-title={{w|Sailor Moon|Pretty Guardian SAILOR MOON}}
-|genre=fiction
-|edition=6th
-|location=Tokyo
-|publisher=Kodansha
-|date=Mar 30 2009
-|origdate=Jan 23 2004
-|volume=6
-|isbn=4-06-334835-0}}
-#*: {{ja-usex|——海の'''星'''海%王%星を守%護にもつ深%海の戦%士——セーラーネプチューン|——^うみ の '''^ほし''' ^かい%おう%せい を しゅ%ご に もつ しん%かい の せん%し ——^セーラー ^ネプチューン|——Warrior of the depths, keeper of Neptune the Sea Planet ——Sailor Neptune|lit=——Warrior of the deep seas who defends Neptune the Sea Star ——Sailor Neptune}}{{ja-usex|そして——風の'''星'''天%王%星を守%護にもつ天%空の戦%士　セーラーウラヌス　参%上！|^そして ——^かぜ の '''^ほし''' ^てん%のう%せい を しゅ%ご に もつ てん%くう の せん%し　^セーラー ^ウラヌス　さん%じょう！|And I am ——the warrior of the ether, keeper of Uranus the Wind Planet. Sailor Uranus enters the scene!|lit=And ——warrior of the heavens who defends Uranus the Wind Star. Sailor Uranus enters the scene!}}
-#* {{quote-book
-|ja
-|location=Tokyo
-|publisher=Shueisha
-|authorlink=Nobuhiro Watsuki
-|first=Nobuhiro
-|last=Watsuki
-|||{{wj|武装錬金|[武](ブ)[装](ソウ)[錬](レン)[金](キン)}}
-|trans-title={{w|Buso Renkin|Armed Alchemy}}
-|date=Nov 9 2005
-|isbn=4-08-873851-9
-|volume=9
-|chapter={{lj|[武](ブ)[装](ソウ)[錬](レン)[金](キン)ファイナル}}
-|trans-chapter=Armed Alchemy: The Final Act}}
-#*: {{ja-usex|………その覚%悟　一%体どこから……？|………^その かく%ご　^いっ%たい どこ から……？|………Such resolve. Where did you get it from……?}}{{ja-usex|もちろん！あの'''惑%星'''から　あそこには守りたい人%達が大%勢いる　一%番…守りたい人がいる|^もちろん！^あの '''ほ%し''' から　^あそこ に は まもりたい ひと%たち が おお%ぜい いる　^いち%ばん… まもりたい ひと が いる|Of course! From that planet. Where there are many people I sworn to protect. But most of all… where there’s the one person I sworn to protect.|lit=Of course! From that star. A great many people whom I want to protect are there. Most of all… the person I want to protect is.}}
-#* {{quote-book
-|ja
-|location=Tokyo
-|publisher=Shueisha
-|authorlink=Nobuhiro Watsuki
-|first=Nobuhiro
-|last=Watsuki
-|||{{wj|武装錬金|[武](ブ)[装](ソウ)[錬](レン)[金](キン)}}
-|trans-title={{w|Buso Renkin|Armed Alchemy}}
-|date=Apr 9 2006
-|isbn=4-08-874019-X
-|volume=10
-|chapter={{lj|[武](ブ)[装](ソウ)[錬](レン)[金](キン)ピリオド}}
-|trans-chapter=Armed Alchemy: The End}}
-#*:{{ja-usex|こちらからも出%迎えに行かねばだが　今の状%態ではその槍でこの'''星'''の重%力を突き破るのも不%可%能　そこでこれを使う　大戦斧の武%装%錬%金フェイタルアトラクション！特%性は〝重%力操%作〟‼これでこの'''星'''の重%力の一%部を反%転させてお前を宇%宙へ打ち上げる|^こちら から も で%むかえ に いかねば だ が　いま の じょう%たい で は その やり で この '''ほし''' の じゅう%りょく を つきやぶる の も ふ%か%のう　^そこ で これ を つかう　^グレート ^アックス の ^ブ%ソウ% ^レン%キン ^フェイタル ^アトラクション！^とく%せい は〝^じゅう%りょく ^そう%さ〟‼ ^これ で この '''ほし''' の じゅう%りょく の いち%ぶ を はん%てん させて お-まえ を う%ちゅう へ うちあげる|You’ll have to get to them yourself. You won’t be able to escape the Moon’s gravity with this lance in your current condition, though. So we’ll use this. Great-Axe Armed Alchemy: Fatal Attraction! Special Ability: ''Gravity Control''‼ With this, I can counteract part of the Moon’s gravity, enough to launch you into space.|lit=You’ll have to get to them yourself. You won’t be able to escape this star’s gravity with this lance in your current condition, though. So we’ll use this. Great-Axe Armed Alchemy: Fatal Attraction! Special Ability: ''Gravity Control''‼ With this, I can counteract part of this star’s gravity, enough to launch you into space.}}
+# {{lb|ja|loosely}} a [[celestial body]]
+#: {{syn|ja|天体|tr=tentai}}
+# {{lb|ja|by extension of a star's movement}} [[time]], [[year]]s 
+# {{lb|ja|sort=ほし|sumo}} a [[round]] [[mark]] indicating a [[victory]] or [[defeat]] in a [[bout]]
+# a {{m|ja|家紋|tr=kamon||[[family]] [[crest]]}} with various representations of a star
+# a [[star]] {{gl|[[actor]] in a [[leading]] [[role]]}}
+# an [[objective]]
+#: {{syn|ja|目星|tr=meboshi}}
+# a [[kagura]] [[song]] [[sing|sung]] at the [[end]] of a {{m|ja|御神楽|tr=mikagura}}
+
+====Citations====
+{{seeCites|ja}}
 
 =====Derived terms=====
-{{der-top}}
-* {{ja-r|星%明かり|ほし%あかり}}: [[starshine]]
-* {{ja-r|星%石|ほし%いし}}: a [[meteorite]]
-* {{ja-r|星%糸|ほし%いと}}: a kind of [[decorative]] [[thread]] with small [[knot]]s or [[ball]]s of thread at regular [[interval]]s
-* {{ja-r|星%糞|ほし%くそ}}: a [[meteorite]]
-* {{ja-r|箒%星|ほうき%ぼし|[[comet]]}}
-* {{ja-r|星%星|ほし%ぼし}}, {{ja-r|星%々|ほし%ぼし|[[stars]]}}
+{{der-top4}}
+* {{ja-r|星星|ほしぼし|rom=-}}, {{ja-r|星々|ほしぼし}}
+* {{ja-r|星%明かり|ほし%あかり|[[starshine]]}}
+* {{ja-r|星石|ほし.いし}}
+* {{ja-r|星糸|ほし.いと}}
+* {{ja-r|星影|ほしかげ}}
+* {{ja-r|星糞|ほしくそ|[[meteorite]]}}
+* {{ja-r|星空|ほしぞら}}
+* {{ja-r|相星|あいぼし}}
+* {{ja-r|明星|あかぼし|rom=-}}, {{ja-r|赤星|あかぼし}}
+* {{ja-r|霰%星|あられ%ぼし}}
+* {{ja-r|一番星|いちばんぼし}}
+* {{ja-r|追星|おいぼし}}
+* {{ja-r|織姫%星|^おりひめ%-ぼし}}
+* {{ja-r|勝ち星|かちぼし}}
+* {{ja-r|綺羅%星|きら%ぼし}}
+* {{ja-r|金星|きんぼし}}
+* {{ja-r|銀星|ぎんぼし}}
+* {{ja-r|黒星|くろぼし}}
+* {{ja-r|白星|しらぼし}}
+* {{ja-r|白星|しろぼし}}
+* {{ja-r|図%星|ず%ぼし}}
+* {{ja-r|出来%星|でき%ぼし}}
+* {{ja-r|七つ星|ななつぼし}}
+* {{ja-r|糠星|ぬかぼし}}
+* {{ja-r|一つ星|ひとつぼし}}
+* {{ja-r|箒星|ほうきぼし}}
+* {{ja-r|負け星|まけぼし}}
+* {{ja-r|本星|ほんぼし}}
+* {{ja-r|流れ星|ながれぼし}}
+* {{ja-r|彦星|^ひこぼし}}
+* {{ja-r|三つ星|みつぼし}}
+* {{ja-r|目%星|め%ぼし}}
+* {{ja-r|夫婦%星|めおと%ぼし}}
 {{der-bottom}}
+
+====See also====
+* {{ja-r|スター}}
 
 ====Proper noun====
 {{ja-pos|proper|ほし}}
 
-# {{surname|ja|sort=ほし}}
+# {{surname|ja|sort=ほし|A=a|nodot=1}}
 
 ===Etymology 2===
-{{ja-kanjitab|yomi=o|せい}}
+{{ja-kanjitab|yomi=kanon|せい}}
 
-From {{der|ja|ltc|-|sort=せい}} {{ltc-l|星|gloss=star}}.
+From {{der|ja|ltc|-|sort=せい}} {{ltc-l|星}}.
 
 The {{m|en|Singapore}} sense derives from the pre-[[World War Two]] kanji spelling {{l|ja|星加坡}} (modern kanji spelling {{l|ja|新加坡}}) as borrowed from {{bor|ja|zh|sort=せい|-}}, itself a [[transliteration]] of {{cog|ms|Singapura}}.
 
 ====Pronunciation====
-{{ja-pron|yomi=kanon|せい|acc=1|acc_ref=DJR}}
+{{ja-pron|yomi=ko|せい|acc=1|acc_ref=DJR}}
 * Note: the pitch accent for the suffix is determined by the entire term.
 
 ====Proper noun====
@@ -221,15 +196,57 @@ The {{m|en|Singapore}} sense derives from the pre-[[World War Two]] kanji spelli
 ====Suffix====
 {{ja-pos|suffix|せい}}
 
-# {{lb|ja|loosely|especially|fiction}} [[planet]] {{gl|suffix attached to the name of a planet}}
-#* {{quote-book|ja|genre=fiction|||first=Mitsuru
-|last=Adachi
-|authorlink=Mitsuru Adachi|{{wj|ショートプログラム (漫画)|[SHORT PROGRAM](ショート・プログラム)}}
-|trans-title={{w|Short Program (manga)|SHORT PROGRAM}}|location=Tokyo|publisher=Shogakukan|date=Feb 20 1996|edition=25th|origdate=Feb 15 1988|isbn=4-09-121881-4|volume=1||256|chapter={{lj|なにがなんだか 前編}}|trans-chapter=What’s What: First Chapter}}
+# {{lb|ja|loosely|especially|fiction}} {{n-g|[[attach]]ed to [[name]]s of [[planet]]s}}
+#* {{quote-book|ja|genre=fiction|||first=Mitsuru|last=Adachi|authorlink=Mitsuru Adachi|{{wj|ショートプログラム (漫画)|[SHORT PROGRAM](ショート・プログラム)}}|trans-title={{w|Short Program (manga)|SHORT PROGRAM}}|location=Tokyo|publisher=Shogakukan|date=Feb 20 1996|edition=25th|origdate=Feb 15 1988|isbn=4-09-121881-4|volume=1||256|chapter={{lj|なにがなんだか 前編}}|trans-chapter=What’s What: First Chapter}}
 #*: {{ja-usex|——あ、わたくしマキシムＡＧＦです。リプトン'''星'''からやってまいりました。地%球の寒さにおどろいてます。どぞよろしく。|——あ、わたくしマキシムＡＧＦです。リプトン'''せい'''からやってまいりました。ち%きゅうのさむさにおどろいてます。どぞよろしく。|——Oh, my name is {{w|lang=ja|味の素AGF|Maxim AGF}}. I came here from '''planet''' {{w|Lipton}}. I’m still taken aback by Earth’s coldness. It is a pleasure to meet all of you.|rom=——A, watakushi Makishimu Ējīefu desu. Riputon'''-sei''' kara yatte mairimashita. Chikyū no samusa ni odoroitemasu. Dozo yoroshiku.}}
 
 =====Derived terms=====
+{{der-top4}}
+* {{ja-r|火%星|^か%せい}}
+* {{ja-r|海王星|^かいおうせい}}
+* {{ja-r|金星|^きんせい}}
+* {{ja-r|水星|^すいせい}}
+* {{ja-r|天王星|^てんのうせい}}
+* {{ja-r|土%星|^ど%せい}}
+* {{ja-r|冥王星|^めいおうせい}}
+* {{ja-r|木製|^もくせい}}
+{{der-bottom}}
+
+====Affix====
+{{ja-pos|affix|せい}}
+
+# [[star]], [[celestial body]]
+# [[passing]] of [[time]]
+# [[star]], [[celebrity]]
+
+=====Derived terms=====
+{{der-top4}}
+* {{ja-r|星雲|せいうん}}
+* {{ja-r|星光|せいこう}}
+* {{ja-r|星%座|せい%ざ}}
+* {{ja-r|星宿|せいしゅく}}
+* {{ja-r|星辰|せいしん}}
+* {{ja-r|星人|せいじん}}
+* {{ja-r|星霜|せいそう}}
+* {{ja-r|星体|せいたい}}
+* {{ja-r|星芒|せいぼう|[[starlight]]}}
+* {{ja-r|星雲|せいうん}}
+* {{ja-r|星団|せいだん}}
+* {{ja-r|衛星|えいせい}}
 * {{ja-r|輝%星|き%せい|[[bright]] [[star]]}}
+* {{ja-r|巨星|きょせい}}
+* {{ja-r|暁星|ぎょうせい}}
+* {{ja-r|恒星|こうせい}}
+* {{ja-r|準星|じゅんせい}}
+* {{ja-r|将星|しょうせい}}
+* {{ja-r|新星|しんせい}}
+* {{ja-r|彗星|すいせい}}
+* {{ja-r|遊星|ゆうせい}}
+* {{ja-r|流星|りゅうせい}}
+* {{ja-r|連星|れんせい}}
+* {{ja-r|矮星|わいせい}}
+* {{ja-r|惑星|わくせい}}
+{{der-bottom}}
 
 ===References===
 <references/>
@@ -247,24 +264,41 @@ The {{m|en|Singapore}} sense derives from the pre-[[World War Two]] kanji spelli
 # [[star]], [[planet]]
 
 ====Compounds====
-* {{l|ko|행성}}(行星) [[planet]]
-* {{l|ko|혜성}}(彗星) [[comet]]
-* {{l|ko|유성}}(流星) [[meteor]]
-* {{l|ko|유성우}}(流星雨) [[meteor shower]]
-* {{l|ko|위성}}(衛星) [[satellite]]
-* {{l|ko|인공위성}}(人工衛星) [[artificial satellite]]
-* {{l|ko|수성}}(水星) [[Mercury]]
-* {{l|ko|금성}}(金星) [[Venus]]
-* {{l|ko|화성}}(火星) [[Mars]]
-* {{l|ko|목성}}(木星) [[Jupiter]]
-* {{l|ko|토성}}(土星) [[Saturn]]
-* {{l|ko|천왕성}}(天王星) [[Uranus]]
-* {{l|ko|해왕성}}(海王星) [[Neptune]]
-* {{l|ko|명왕성}}(冥王星) [[Pluto]]
-* {{l|ko|성학}}(星學)={{l|ko|천문학}}(天文學) [[astronomy]]
-* {{l|ko|성조기}}(星條旗) [[the American flag]]
-* {{l|ko|오성홍기}}(五星紅旗) [[the Chinese flag]]
-* {{l|ko|금성홍기}}(金星紅旗) [[the Vietnamese flag]]
+{{der-top3|Compounds}}
+* {{ko-l|행성|行星}}
+* {{ko-l|혜성|彗星}}
+* {{ko-l|유성|流星}}
+* {{ko-l|위성|衛星}}
+* {{ko-l|^수성|水星}}
+* {{ko-l|^금성|金星}}
+* {{ko-l|^화성|火星}}
+* {{ko-l|^목성|木星}}
+* {{ko-l|^토성|土星}}
+* {{ko-l|^천왕성|天王星}}
+* {{ko-l|^해왕성|海王星}}
+* {{ko-l|^명왕성|冥王星}}
+{{der-bottom}}
+
+----
+
+==Old Japanese==
+
+===Etymology===
+From {{inh|ojp|jpx-pro|sort=ほし|*pəsi}}.
+
+===Noun===
+{{head|ojp|noun|tr=posi|kana|ほし|sort=ほし}}
+
+# a [[star]]
+
+====Citations====
+{{seeCites|ojp}}
+
+====Derived terms====
+* {{m|ojp|彦星|tr=Pi<sub>1</sub>ko<sub>1</sub>posi||[[Altair]]}}
+
+====Descendants====
+* {{desc|ja|星|tr=hoshi}}
 
 ----
 
