--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -84,6 +84,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |cross that bridge when one comes to it
 |drawbridge
 |footbridge
+|Gorebridge
 |Hebden Bridge
 |humpback bridge
 |ice bridge
