--- a/en/昌/昌.16948.wikitext
+++ b/en/昌/昌.16948.wikitext
@@ -66,10 +66,10 @@
 
 ====Readings====
 {{ja-readings
-|goon=しょう<しやう
-|kanon=しょう<しやう
+|goon=しょう
+|kanon=しょう
 |kun=さかん
-|nanori=まさ, あき, よし}}
+|nanori=まさ, あき, よし, まさし, あきら, さかえ, あつ, すけ}}
 
 ----
 
