--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -16,7 +16,7 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*felta
 {{en-noun|~}}
 
 # A [[cloth]] or stuff made of [[mat]]ted [[fibre]]s of [[wool]], or wool and [[fur]], [[full]]ed or wrought into a compact substance by rolling and pressure, with lees or size, without spinning or weaving.
-#* Shakespeare, ''King Lear'', act 4, scene 6:
+#* {{rfdate|en}}, {{w|Shakespeare}}, ''King Lear'', act 4, scene 6:
 #*: It were a delicate stratagem to shoe A troop of horse with '''felt'''.
 # A [[hat]] made of felt.
 # {{lb|en|obsolete}} A [[skin]] or [[hide]]; a [[fell]]; a [[pelt]].
@@ -115,6 +115,7 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*felta
 # {{lb|en|transitive}} To cover with, or as if with, felt.
 #: ''to '''felt''' the cylinder of a steam engine''
 # {{lb|en|transitive|poker}} To cause a player to lose all their chips.
+
 =====Translations=====
 {{trans-top|make into felt}}
 * Dutch: {{t+|nl|vilten}}
