--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -89,7 +89,7 @@ Proto-{{w|Kiranti languages|Kiranti}} {{m|und|*saŋ||star}} either develops from
 {{ja-readings
 |goon=しょう<しやう
 |kanon=せい
-|kun=ほし-
+|kun=ほし-, ぼし
 }}
 
 ====Compounds====
