--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -111,7 +111,7 @@ Possibly from {{inh|zh|sit-pro|*d(w)əj||egg; testicle}} ({{zh-ref|Baxter and Sa
 |goon=しゅん
 |kanon=しゅん
 |kun=はる-
-}}
+|nanori=あずま, かす, すの, ひ, わら}}
 
 ====Compounds====
 * {{ja-r|小%春|こ%はる|[[early]] [[autumn]], [[Indian summer]]}}
