--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -91,7 +91,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 *: Mandarin: {{t+|cmn|漂亮|tr=piàoliang|sc=Hani}}, {{t+|cmn|美|tr=měi|sc=Hani}}, {{t+|cmn|好看|tr=hǎokàn|sc=Hani}}, {{t+|cmn|美麗|sc=Hani}}, {{t+|cmn|美丽|tr=měilì|sc=Hani}}
 *: Min Nan: {{t+|nan|媠|tr=súi|sc=Hani}}, {{t+|nan|美麗|sc=Hani}}, {{t|nan|美丽|tr=bí-lē|sc=Hani}}, {{t|nan|好看|tr=hó-khòaⁿ|sc=Hani}}, {{t+|nan|媠噹噹|sc=Hani}}, {{t|nan|媠当当|tr=súi-tang-tang|sc=Hani}}
 *: Teochew: {{t|zhx-teo|雅|tr=ngia2}}
-* Coptic: {{t-needed|cop}}
+* Coptic: {{t|cop|ⲛⲉⲥⲉ}}
 * Cornish: {{t|kw|teg}}
 * Czech: {{t+|cs|krásný}}, {{t+|cs|pěkný}}
 * Dalmatian: {{t|dlm|bial}}
