--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -215,6 +215,7 @@ From {{inh|es|la|līber}}, from {{inh|es|itc-ola|loeber}}, from {{inh|es|itc-pro
 |aire libre
 |libremente
 |tiempo libre
+|{{l|es|libre de culpa}}
 }}
 
 =====Related terms=====
