--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -8,6 +8,7 @@
 ===Pronunciation===
 * {{a|UK|US}} {{IPA|en|/juːˌnaɪ.tɪd ˈkɪŋ.dəm/|/jʊˌnaɪ.tɪd ˈkɪŋ.dəm/|/jəˌnaɪ.tɪd ˈkɪŋ.dəm/}}
 * {{audio|en|en-us-United Kingdom.ogg|Audio (US)}}
+* {{hyphenation|en|Unit|ed King|dom}}
 
 ===Proper noun===
 {{en-proper noun|head=[[united|United]] [[kingdom|Kingdom]]}}
