--- a/en/惺/惺.15630.wikitext
+++ b/en/惺/惺.15630.wikitext
@@ -4,8 +4,6 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=96014|canj=PAHM|ids=⿰忄星}}
 
-# [[intelligent]], [[clever]], [[astute]]
-
 ====References====
 {{Han ref|kx=0393.040|dkj=10868|dj=0729.020|hdz=42328.020|uh=60FA}}
 
@@ -19,17 +17,18 @@
 
 ===Pronunciation===
 {{zh-pron
-|m=xīng,xǐng
+|m=xīng,xǐng,1nb=standard in Mainland for both senses,1nc=standard in Taiwan for the adjectival sense,2nb=standard in Taiwan for the verb sense
 |c=sing1,sing2
 |mc=y
 |oc=y
-|cat=
+|cat=a,v
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# {{lb|zh|literary}} [[intelligent]]; [[clever]]; [[astute]]
+# {{lb|zh|literary}} to [[come]] to [[understand]]; to [[come]] to [[realize]]
 
 ====Compounds====
 {{zh-der|假惺惺|惺惺相惜|惺惺人|惺忪|惺惺道人|惺惺|惺惺作態|睡眼惺忪|還惺}}
