--- a/en/惺/惺.15630.wikitext
+++ b/en/惺/惺.15630.wikitext
@@ -31,7 +31,7 @@
 # {{lb|zh|literary}} to [[come]] to [[understand]]; to [[come]] to [[realize]]
 
 ====Compounds====
-{{zh-der|假惺惺|惺惺相惜|惺惺人|惺忪|惺惺道人|惺惺|惺惺作態|睡眼惺忪|還惺}}
+{{zh-der|假惺惺|惺惺相惜|惺惺人|惺忪|惺惺道人|惺惺|惺惺作態|睡眼惺忪|還惺|惺惺惜惺惺|昧著惺惺使糊塗/昧着惺惺使糊涂}}
 
 ===References===
 * {{R:yue:mfccd}}
