--- a/en/坌/坌.13007.wikitext
+++ b/en/坌/坌.13007.wikitext
@@ -28,13 +28,19 @@
 |c=ban6
 |mc=y
 |oc=y
-|cat=
+|cat=n,v,a
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# {{†}} [[dust]]; [[earth]]
+# {{†}} (of [[dust]]) to [[fly]] [[up]] or [[settle]] on something else
+# {{†}} to [[assemble]]; to [[gather]]
+# {{†}} to [[gush]]
+# {{†}} [[together]]
+# {{lb|zh|dialectal}} to [[dig]] ([[carrot]]s, etc.); to [[turn over]] ([[soil]])
+# {{†}} {{zh-alt-form|笨|[[dull]]; [[clumsy]]}}
 
 ===Compounds===
 {{zh-der|坌鳥先飛|坌工|坌集}}
