/* Derived terms */ <bridge#58029840>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -76,6 +76,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |bridge loan
 |bridge mount
 |Bridge of Earn
+|Bridge of Orchy
 |Bridge of Weir
 |bridge over troubled waters
 |bridge route
