--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -320,6 +320,7 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 * Yiddish: {{t|yi|קומען|sc=Hebr}}
 * Yoruba: {{t-needed|yo}}
 * Yucatec Maya: {{t|yua|tal}}
+* Yámana: {{t|yag|akata}}
 * Zazaki: {{t|zza|amaene}}, {{t|zza|amayen}}
 * Zealandic: {{t|zea|komme}}
 * Zhuang: {{t|za|daeuj}}
