--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -216,6 +216,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * West Frisian: {{t|fy|tonger}}
 * Westrobothnian: {{t|gmq-bot|Thorn|m}}
 * Winnebago: {{t|win|kʼoo}}
+* Yámana: {{t|yag|kalaša}}
 * Zazaki: {{t|zza|gumlerz}}
 * Zhuang: {{t|za|byajraez}}
 {{trans-bottom}}
