--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -36,10 +36,10 @@
 
 ====Translations====
 {{trans-top|id=Q30|country in North America}}
-* Abkhaz: {{t|ab|Америка Еиду Аштатқәа}}
+* Abkhaz: {{t|ab|Америка Еиду Аштатқәа}}, {{t|ab|Америка}}
 * Adyghe: {{t|ady|Америкэ Штат Зэхэтхэр}}
 * Afrikaans: {{t|af|Verenigde State van Amerika}}, {{t+|af|Amerika}}
-* Albanian: {{t|sq|Shtete e Bashkuara të Amerikës}}, {{t+|sq|SHBA}}
+* Albanian: {{t|sq|Shtete e Bashkuara të Amerikës}}, {{t+|sq|SHBA}}, {{t|sq|Amerikë|f}}
 * Amharic: {{t|am|የተባበሩት የአሜሪካ ግዛቶች}}
 * Arabic: {{t+|ar|الْوِلَايَاتُ الْمُتَّحِدَةُ الْأَمْرِيكِيَّة|f-p}}, {{t|ar|الْوِلَايَاتُ الْمُتَّحِدَة|f-p}}, {{t+|ar|أَمْرِيكَا|f}}
 * Aramaic:
@@ -49,7 +49,7 @@
 * Avar: {{t|av|Америкалъул Цолъарал Штатал}}
 * Aymara: {{t|ay|Istadus Unidus}}
 * Azerbaijani: {{t+|az|Amerika Birləşmiş Ştatları}}, {{t+|az|Amerika}}
-* Bashkir: {{t|ba|Америка Ҡушма Штаттары}}
+* Bashkir: {{t|ba|Америка Ҡушма Штаттары}}, {{t|ba|Америка}}
 * Basque: {{t|eu|Ameriketako Estatu Batuak}}
 * Belarusian: {{t|be|Злу́чаныя Шта́ты Аме́рыкі|m-p}}, {{t|be|ЗША|m-p}}, {{t|be|Аме́рыка|f}}
 * Bengali: {{t|bn|মার্কিন যুক্তরাষ্ট্র|tr=markin juktôraṣţrô}}
@@ -60,7 +60,7 @@
 * Catalan: {{t+|ca|Estats Units d'Amèrica|m-p}}
 * Cebuano: {{t|ceb|Estados Unidos sa Amerika}}, {{t|ceb|Tinipong Bansa sa Amerika}}
 * Central Atlas Tamazight: {{t|tzm|ⵜⵉⵎⴰⵥⵍⴰⵢⵉⵏ ⵉⵎⵓⵏⴻⵏ ⵏ ⴰⵎⵉⵔⵉⴽⴰ}}
-* Chechen: {{t|ce|Американ Цхьанакхетта Штаташ}}
+* Chechen: {{t|ce|Американ Цхьанакхетта Штаташ}}, {{t|ce|Америка}}
 * Cherokee: {{t|chr|ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ ᎾᎿ ᎠᎺᏰᏟ}}
 * Chinese:
 *: Cantonese: {{t|yue|美利堅合眾國|sc=Hani}}, {{t|yue|美利坚合众国|tr=mei5 lei3 gin1 hap6 zong3 gwok3|sc=Hani}}, {{t|yue|美國|sc=Hani}}, {{t|yue|美国|tr=mei5 gwok3|sc=Hani}}, {{t+|yue|美|tr=mei5|sc=Hani}}
@@ -81,14 +81,14 @@
 * Eastern Keres: {{t|kee|'Amelika-hui-pu-'ia}}
 * Erzya: {{t|myv|Американь Вейтьсэндявкс Штаттнэ}}
 * Esperanto: {{t+|eo|Usono}}, {{t+|eo|Unuiĝintaj Ŝtatoj de Ameriko}}
-* Estonian: {{t+|et|Ameerika Ühendriigid|p}}, {{t|et|Ühendriigid|p}}
+* Estonian: {{t+|et|Ameerika Ühendriigid|p}}, {{t|et|Ühendriigid|p}}, {{t+|et|Ameerika}}
 * Faroese: {{t|fo|Sameindu Statirnir Í Amerika|n}}, {{t|fo|Sambandsríki Amerika|n}}
-* Finnish: {{t+|fi|Amerikan yhdysvallat}}, {{t+|fi|Yhdysvallat}}, {{t+|fi|USA}}
+* Finnish: {{t+|fi|Amerikan yhdysvallat}}, {{t+|fi|Yhdysvallat}}, {{t+|fi|USA}}, {{t+|fi|Amerikka}}
 * French: {{t+|fr|États-Unis d'Amérique|m-p}}, {{t+|fr|États-Unis|m-p}}, {{t|fr|É-U}}, {{t+|fr|Amérique|f}}
 * Galician: {{t+|gl|Estados Unidos de América|m-p}}
 * Georgian: {{t|ka|ამერიკის შეერთებული შტატები}}, {{t+|ka|აშშ}}, {{t|ka|შეერთებული შტატები}}, {{t+|ka|აშშ}}, {{t|ka|ამერიკა}}
 * German: {{t+|de|Vereinigte Staaten von Amerika|m-p}}, {{t+|de|Vereinigte Staaten|m-p}}, {{t+|de|USA|m-p|f-s}}, {{t+|de|Amerika|n}}
-* Greek: {{t+|el|Ηνωμένες Πολιτείες της Αμερικής|f-p}} {{qualifier|official}}, {{t|el|Ηνωμένες Πολιτείες Αμερικής|f-p}}, {{t+|el|Ηνωμένες Πολιτείες|f-p}}, {{t+|el|ΗΠΑ|f-p}}
+* Greek: {{t+|el|Ηνωμένες Πολιτείες της Αμερικής|f-p}} {{qualifier|official}}, {{t|el|Ηνωμένες Πολιτείες Αμερικής|f-p}}, {{t+|el|Ηνωμένες Πολιτείες|f-p}}, {{t+|el|ΗΠΑ|f-p}}, {{t+|el|Αμερική|f}}
 * Greenlandic: {{t|kl|Naalagaaffeqatigiit}}
 * Guaraní: {{t|gn|Tetã peteĩ reko Amérikagua}}
 * Gujarati: {{t|gu|સંયુકત રાજ્ય અમેરિકા}}
@@ -99,7 +99,7 @@
 * Hiligaynon: {{t-needed|hil}}
 * Hindi: {{t|hi|संयुक्त राज्य अमरीका}}, {{t|hi|संयुक्त राष्ट्र अमरीका}}, {{t+|hi|अमेरिका|m}}, {{t+|hi|अमरीका|m}}
 * Hungarian: {{t+|hu|Amerikai Egyesült Államok}}, {{t+|hu|Egyesült Államok}}, {{t+|hu|USA}}, {{t+|hu|Amerika}}
-* Icelandic: {{t+|is|Bandaríkin|n-p}}, {{t|is|Bandaríki Norður-Ameríku}}
+* Icelandic: {{t+|is|Bandaríkin|n-p}}, {{t|is|Bandaríki Norður-Ameríku}}, {{t+|is|Ameríka|f}}
 * Indonesian: {{t+|id|Amerika Serikat}}
 * Interlingua: {{t|ia|Statos Unite de America}}
 * Interlingue: {{t|ie|Unit States de America}}
@@ -118,7 +118,7 @@
 * Komi-Permyak: {{t|koi|Америкаса Ӧтувтӧм Штатъяс}}
 * Korean: {{t|ko|^미국}} ({{t+|ko|美國}}), {{t|ko|^아메리카 합중국}}, {{t|ko|^미합중국}} ({{t|ko|美合衆國}})
 * Kurdish:
-*: Kurmanji: {{t+|ku|Dewletên Yekbûyî yên Amerîkayê}}
+*: Kurmanji: {{t+|ku|Dewletên Yekbûyî yên Amerîkayê}}, {{t+|ku|Amerîka}}, {{t+|ku|Emrîka}}
 *: Sorani: {{t+|ku|دەولەتێن یەکبوویییێن ئەمەریکایێ|tr=Dewletên Yekbûyîyên Emerîkayê}}, {{t|ckb|وڵاتە یەکگرتووەکانی ئەمەریکا|tr=Wiłâta Yekgirtûakâni Amerikâ}}
 * Kyrgyz: {{t+|ky|Америка Кошмо Штаттары}}, {{t+|ky|Америка}}
 {{trans-mid}}
@@ -126,10 +126,10 @@
 * Lao: {{t|lo|ສະຫະລັດອະເມລິກາ}}, {{t|lo|ອະເມລິກາ}}, {{t|lo|ອາເມລິກາ}}
 * Latgalian: {{t|ltg|Amerikys Saškiertuos Vaļsteibys}}, {{t|ltg|ASV}}
 * Latin: {{t|la|Civitates Foederatae Americae}}, {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}
-* Latvian: {{t|lv|Amerikas Savienotās Valstis}}, {{t|lv|ASV}}
+* Latvian: {{t|lv|Amerikas Savienotās Valstis}}, {{t|lv|ASV}}, {{t|lv|Amerika|f}}
 * Laz: {{t-needed|lzz}}
 * Lezgi: {{t|lez|Америкадин Садхьанвай Штатар|p}}
-* Lithuanian: {{t+|lt|Jungtinės Amerikos Valstijos}}, {{t+|lt|JAV}}
+* Lithuanian: {{t+|lt|Jungtinės Amerikos Valstijos}}, {{t+|lt|JAV}}, {{t+|lt|Amerika|f}}
 * Macedonian: {{t+|mk|Соеди́нети Амери́кански Држа́ви|f-p}}, {{t+|mk|САД|f-p}}, {{t+|mk|Америка|f}}
 * Malay: {{t+|ms|Amerika Syarikat}}, {{t|ms|AS}}, {{t|ms|Amerika}}
 * Malayalam: {{t|ml|അമേരിക്കൻ ഐക്യനാടുകൾ}}
@@ -148,7 +148,7 @@
 * Norwegian:
 *: Bokmål: {{t+|nb|Amerikas forente stater}}, {{t|nb|De forente stater}}, {{t+|nb|Amerika}}
 *: Nynorsk: {{t|nn|Dei amerikanske Sambandsstatane}}, {{t+|nn|USA}}
-* Ossetian: {{t|os|Америкӕйы Иугонд Штаттӕ}}
+* Ossetian: {{t|os|Америкӕйы Иугонд Штаттӕ}}, {{t|os|Америкӕ}}
 * Palauan: {{t|pau|Merikel}}
 * Pashto: {{t|ps|د امريکا متحده ايالات|tr=də amrīkā mutaḥidâ iyālāt}}, {{t+|ps|امريکا|f|tr=amrikā}}
 * Pennsylvania German: {{t|pdc|Vereenichde Schtaate vun Amerikaa}}
@@ -171,7 +171,7 @@
 * Sicilian: {{t|scn|Stati Uniti dâ Mèrica|m-p}}
 * Silesian: {{t|szl|Stany Zjydnočůne Ameryki|m-p}}
 * Sindhi: {{t|sd|گڏيل آمريڪي رياستون}}, {{t|sd|يونائيٽيڊ سٽيٽس آف آميريڪا}}
-* Sinhalese: {{t|si|ඇමරිකානු එක්සත් ජනපදය}}
+* Sinhalese: {{t|si|ඇමරිකානු එක්සත් ජනපදය}}, {{t|si|ඇමරිකාව}}
 * Slovak: {{t|sk|Spojené Štáty Americké|m-p}}, {{t+|sk|USA}}, {{t+|sk|Amerika|f}}
 * Slovene: {{t+|sl|Združene države Amerike|f-p}}, {{t|sl|Združene države|f-p}}, {{t+|sl|ZDA}}, {{t+|sl|Amȇrika|f}}
 * Somali: {{t|so|Gobolada Isku Tegay ee Ameerika}}
@@ -186,7 +186,7 @@
 * Tagalog: {{t|tl|Estados Unidos ng Amerika}}, {{t|tl|Nangagkakaisang Banwa ng Amerika}}, {{t|tl|Nagkakaisang Kalupaan ng Amerika}}
 * Tajik: {{t|tg|Иёлоти Муттаҳидаи Амриқо}}, {{t+|tg|Амрико}}
 * Tamil: {{t+|ta|அமெரிக்க ஐக்கிய நாடு}}
-* Tatar: {{t|tt|Америка Кушма Штатлары}}
+* Tatar: {{t|tt|Америка Кушма Штатлары}}, {{t|tt|Америка}}
 * Telugu: {{t+|te|అమెరికా సంయుక్త రాష్ట్రాలు}}
 * Thai: {{t+|th|สหรัฐอเมริกา}}, {{t|th|อเมริกา}}
 * Tibetan: {{t|bo|ཨ་མེ་རི་ཁ་རྒྱལ་ཕྲན་མཉམ་འབྲེལ་རྒྱལ་ཁབ}}, {{t|bo|ཨ་རི}}
@@ -197,7 +197,7 @@
 * Udmurt: {{t|udm|Огазеяськем Америка Штатъёс}}
 * Ukrainian: {{t+|uk|Сполу́чені Шта́ти Аме́рики|m-p}}, {{t+|uk|США|m-p}}, {{t|uk|Злу́чені Шта́ти Аме́рики|m-p}}, {{t|uk|ЗША|m-p}}, {{t|uk|Аме́рика|f}}
 * Urdu: {{t|ur|ریاستہائے متحدہ امریکہ|tr=riyāsathāʾe muttaḥidâ-e amrīkâ}}
-* Uyghur: {{t|ug|ئامېرىكا قوشما شتاتلىرى}}
+* Uyghur: {{t|ug|ئامېرىكا قوشما شتاتلىرى}}, {{t|ug|ئامېرىكا}}
 * Uzbek: {{t+|uz|Amerika Qo'shma Shtatlari}}, {{t+|uz|Amerika}}
 * Vietnamese: {{t+|vi|Hoa Kỳ}}, {{t|vi|Nước Mỹ}}, {{t|vi|Mỹ Quốc}}, {{t|vi|Hợp chúng quốc Hoa Kỳ}}, {{t|vi|HK}}, {{t+|vi|Mỹ}}
 * Volapük: {{t+|vo|Lamerikän}}, {{t|vo|Tats-Pebalöl Nolüda-Meropa}}, {{t|vo|Tats-Pebalöl Meropa}}, {{t+|vo|Tats-Pebalöl}}, {{t|vo|TPM}}
