--- a/en/愊/愊.15646.wikitext
+++ b/en/愊/愊.15646.wikitext
@@ -4,9 +4,6 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=91066|canj=PMRW,XPMRW|ids=⿰忄畐}}
 
-# [[sincere]], [[honest]]
-# [[depressed]]
-
 ====References====
 {{Han ref|kx=0394.160|dkj=10916|dj=0730.230|hdz=42326.090|uh=610A}}
 
@@ -20,7 +17,7 @@
 
 ===Pronunciation===
 {{zh-pron
-|m=bì,qì
+|m=bì
 |c=bik1
 |mc=y
 |oc=y
@@ -31,7 +28,11 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# {{†}} [[sincere]]; [[honest]]
+# {{†}} [[depressed]]; [[pent-up]]
+
+===Compounds===
+{{zh-der|愊抑|愊憶|愊億|悃愊|悃愊無華}}
 
 ----
 
