--- a/en/昪/昪.16978.wikitext
+++ b/en/昪/昪.16978.wikitext
@@ -12,12 +12,34 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[bin6]]|y=bin6}}
+===Pronunciation===
+{{zh-pron
+|m=biàn
+|m-s=
+|dg=
+|c=bin6
+|c-t=
+|g=
+|h=pfs=
+|j=
+|mb=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=n
+}}
 
-# {{rfdef|yue|sort=日05}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ----
 
@@ -33,15 +55,6 @@
 |on=へん, べん
 |kun=たのしむさま, あきらか
 }}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[biàn]] ([[bian4]])|wg=pien<sup>4</sup>}}
-
-# {{rfdef|cmn|sort=日05}}
 
 ----
 
