added [[Category:en:Birds of prey]] using [[Help:Gadget-HotCat|HotCat]] <secretary#58088020>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -235,3 +235,4 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 [[Category:en:Furniture]]
 [[Category:en:Occupations]]
 [[Category:en:People]]
+[[Category:en:Birds of prey]]
