t+et:[[{{t-needed}}]] t+ta:[[{{t-needed}}]] ([[WT:EDIT|Assisted]]) <cost#58098615>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -64,6 +64,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Danish: {{t|da|koste}}
 * Dutch: {{t+|nl|kosten}}
 * Esperanto: {{t|eo|kosti}}
+* Estonian: {{t-needed|et}}
 * Faroese: {{t|fo|kosta}}
 * Finnish: {{t+|fi|maksaa}}
 * French: {{t+|fr|coûter}}, {{t+|fr|couter}}
@@ -122,6 +123,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Spanish: {{t+|es|costar}}
 * Swahili: {{t+|sw|gharimu}}
 * Swedish: {{t+|sv|kosta|c}}
+* Tamil: {{t-needed|ta}}
 * Thai: {{t+|th|ราคา}} {{q|a noun, may be used to express the English verb "to cost" in certain uses}}
 * Tibetan: {{t|bo|གནད}}
 * Turkish: {{t|tr|fiyatı olmak}}
