/* Translations */ Added Ancient Egyptian translation of this word. <flesh#58101938>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -65,6 +65,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 * Czech: {{t+|cs|maso|n}}
 * Danish: {{t+|da|kød|n}}
 * Dutch: {{t+|nl|vlees|n}}
+* Egyptian: {{t-egy|jwf|h=i-W:f-F51:Z2ss}}
 * Esperanto: {{t|eo|karno}}
 * Faroese: {{t+|fo|kjøt|n}}
 * Finnish: {{t+|fi|liha}}
