/* Synonyms */ Added derived term <suck#58101995>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -37,6 +37,9 @@ From {{inh|en|enm|souken}}, {{m|enm|suken|}}, from {{inh|en|ang|sūcan|t=to suck
 * {{sense|crybaby}} {{l|en|sook}}
 * {{sense|crybaby}} {{l|en|sooky baby}}
 
+====Derived terms====
+* {{l|en|fair suck of the sauce bottle}}
+
 ====Translations====
 {{trans-top|instance of drawing something into one's mouth by inhaling}}
 * Arabic: {{t|ar|مَصَّة|f}}
