/* Derived terms */ <bridge#58105455>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -82,6 +82,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |bridge route
 |bridge strike
 |bridge the gap
+|Cameron Bridge
 |Conon Bridge
 |covered bridge
 |cross that bridge when one comes to it
