--- a/en/垛/垛.13087.wikitext
+++ b/en/垛/垛.13087.wikitext
@@ -26,20 +26,6 @@
 |mn=tó/qz:tó͘/tw:té
 |mc=y
 |oc=y
-|cat=
-}}
-
-====Definitions====
-{{zh-hanzi}}
-
-# {{rfdef|zh}}
-
-====Compounds====
-{{zh-der|垛積|堆垛|垛句|一垛|垛字|一箭上垛|標垛|打垛|駝垛|錢垛|門垛子|點垛|箭垛}}
-
-===Pronunciation 2===
-{{zh-pron
-|m=duǒ
 |cat=n,v,cl
 }}
 
@@ -49,6 +35,22 @@
 # to [[pile]]; to [[stack]]
 # [[pile]]; [[stack]]
 # {{zh-classifier|[[pile]]s or [[stack]]s}}
+
+====Compounds====
+{{zh-der|垛積|堆垛|垛句|一垛|垛字|一箭上垛|標垛|打垛|駝垛|錢垛|門垛子|點垛|箭垛}}
+
+===Pronunciation 2===
+{{zh-pron
+|m=duǒ
+|cat=n,v
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# [[buttress]]; [[battlement]]s
+# [[target]] (of [[arrow]]s)
+# to [[mount]] with [[clay]]
 
 ====Compounds====
 {{zh-der|垛子|城垛口|牆垛子}}
