/* Etymology 1 */  # {{lb|zh|dialectal}} [[field]]; [[farmland]] # {{zh-used2|p}} // 中華漢英大詞典 <垌#58125662>

--- a/en/垌/垌.13071.wikitext
+++ b/en/垌/垌.13071.wikitext
@@ -24,16 +24,17 @@
 {{zh-pron
 |m=dòng
 |c=dung6
-|cat=
+|cat=n
 }}
 
 ====Definitions====
 {{zh-hanzi}}
 
-# {{zh-only|儒垌}}
+# {{lb|zh|dialectal}} [[field]]; [[farmland]]
+# {{zh-used2|p}}
 
 ====Compounds====
-{{zh-der|儒垌}}
+{{zh-der|儒垌|合傘垌}}
 
 ===Etymology 2===
 {{zh-forms}}
