/* Readings */ copy from <值#58145379>

--- a/en/值/值.11082.wikitext
+++ b/en/值/值.11082.wikitext
@@ -81,8 +81,9 @@ Taiwan: ti̍t - literary; ta̍t - vernacular
 
 ====Readings====
 {{ja-readings
-|on=ち, ちょく
-|kun=ね, あたい, あう
+|goon=じ, じき
+|kanon=ち, ちょく
+|kun=ね-, あたい-, あ-う
 }}
 
 ----
