t+wa:[[tchoezi]] t+wa:[[relére]] ([[WT:EDIT|Assisted]]) <choose#58148250>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -134,6 +134,7 @@ From {{inh|en|enm|chosen}}, {{m|enm|chesen}}, from {{inh|en|ang|ċēosan||to cho
 * Uzbek: {{t+|uz|tanlamoq}}
 * Venetian: {{t+|vec|ẑernir}}, {{t|vec|sièlder}}, {{t|vec|sèlier}}, {{t|vec|sèłier}}, {{t|vec|sernìr}}, {{t|vec|sèrner}}, {{t|vec|sèrnar}}
 * Vietnamese: {{t+|vi|chọn}}, {{t+|vi|lựa chọn}}, {{t+|vi|kén chọn}}
+* Walloon: {{t|wa|tchoezi}}
 * Welsh: {{t+|cy|dewis}}
 {{trans-bottom}}
 
@@ -198,6 +199,7 @@ From {{inh|en|enm|chosen}}, {{m|enm|chesen}}, from {{inh|en|ang|ċēosan||to cho
 * Ukrainian: {{t|uk|вибира́ти}}
 * Urdu: {{t|ur|چننا|tr=cunnā}}
 * Vietnamese: {{t+|vi|chọn}}
+* Walloon: {{t+|wa|relére}}
 * Welsh: {{t+|cy|ethol}}
 * Yiddish: {{t|yi|קלײַבן|tr=klaybn}}, {{t|yi|אויסקלײַבן|tr=oysklaybn}}
 {{trans-bottom}}
