t+sv:[[stall]] ([[WT:EDIT|Assisted]]) <bridge#58154510>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -478,6 +478,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 * Persian: {{t+|fa|خرک|tr=xarak|sc=fa-Arab}}
 * Portuguese: {{t+|pt|cavalete|m}}
 * Spanish: {{t+|es|puente|m}}
+* Swedish: {{t+|sv|stall|n}}
 * Thai: {{t|th|หย่อง}}, {{t|th|ซุ้ม}}
 * Zazaki: {{t|zza|pırdek|c}}
 {{trans-bottom}}
