--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -227,6 +227,13 @@ From {{der|da|de|Stab}}.
 
 ----
 
+==Lushootseed==
+
+===Determiner===
+{{head|lut|determiner}}
+
+# [[what]]
+
 ==Swedish==
 {{wikipedia|lang=sv}}
 
