Undo revision 58159924 by [[Special:Contributions/Jjackoti|Jjackoti]] ([[User talk:Jjackoti|talk]]) that's not a typo; [[forgo]] is a word <i.e.#58160015>

--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -22,7 +22,7 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 ====Usage notes====
 * Often confused with ''[[e.g.]]'': In correct use, ''i.e.'' is used to [[explain]], [[clarify]] or [[rephrase]] a statement, whereas ''[[e.g.]]'' is used to list examples.<br /> The correct use of ''i.e.'' differs from that of ''[[viz.]]'' in that what follows ''i.e.'' merely restates in other words what has already been said, whereas what follows ''viz.'' expands upon what has already been said; and it differs from the correct use of ''e.g.'' in that completeness or near-completeness is suggested by ''i.e.'', whereas e.g. introduces a not complete and often only small selection of examples.
 * American English prefers a comma after ''i.e.'', but British English usually does not use a comma there and often does not use dots either.
-* Opinion is mixed about whether the abbreviation should be italicized, or whether there should be a separating non-breaking space as in ''i.&nbsp;e.'', or whether this matters at all. However, the [[wikipedia:AMA Manual of Style|AMA manual of style]] recommends to forgot italic on terms long since naturalized into English and not to separate abbreviations (see [[wikipedia:Abbreviation|"Abbreviation" on Wikipedia]]).
+* Opinion is mixed about whether the abbreviation should be italicized, or whether there should be a separating non-breaking space as in ''i.&nbsp;e.'', or whether this matters at all. However, the [[wikipedia:AMA Manual of Style|AMA manual of style]] recommends to forgo italic on terms long since naturalized into English and not to separate abbreviations (see [[wikipedia:Abbreviation|"Abbreviation" on Wikipedia]]).
 
 ====Synonyms====
 * See also [[Thesaurus:in other words]]
