--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -74,7 +74,7 @@ From {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|dum|b
 * Alabama: {{t|akz|okɬipaspa}}
 * Albanian: {{t+|sq|tullë|f}}
 * Amharic: {{t|am|ጡብ|sc=Ethi}}
-* Arabic: {{t|ar|طُوبَة|f}}, {{t|ar|لَبِنَة|f}}, {{t|ar|قَرْمِيد|m}}, {{t|ar|طَابُوق|m|tr=ṭābūq}}
+* Arabic: {{t|ar|طُوبَة|f}}, {{t|ar|لَبِنَة|f}}, {{t|ar|قَرْمِيد|m}}, {{t|ar|طَابُوق|m}}
 * Aramaic:
 *: Classical Syriac: {{t|syc|ܠܒܬܐ|f|tr=ləḇettā}}
 *: Jewish Palestinian Aramaic: {{t|arc|לְבֵינְתָא|f|tr=ləḇênəṯā|sc=Hebr}}
@@ -83,7 +83,7 @@ From {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|dum|b
 * Assamese: {{t|as|ইটা}}
 * Asturian: {{t|ast|lladriyu|m}}
 * Avar: {{t|av|кирпич}}
-* Avestan: {{t|ae|𐬌𐬱𐬙𐬌𐬌𐬀|m|tr=ištiia}}
+* Avestan: {{t|ae|𐬌𐬱𐬙𐬌𐬌𐬀|m}}
 * Azerbaijani: {{t+|az|kərpic}}
 * Bashkir: {{t|ba|кирбес|sc=Cyrl}}
 * Basque: {{t|eu|adreilu}}
@@ -322,7 +322,7 @@ From {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|dum|b
 {{trans-mid}}
 * Portuguese: {{t+check|pt|tijolo|m}}
 * Romanian: {{t+check|ro|cărămidă|f}}
-* Swahili: {{t-check|sw|tofali}}, {{t-check|sw|matofali|p}} (1, 2) {{qualifier|noun 5/6}}
+* Swahili: {{t-check|sw|tofali|c5|c6}} (1, 2)
 * Telugu: {{t+check|te|ఇటుక|sc=Telu}} (1, 2)
 * Ukrainian: {{t+check|uk|цеглина|f|sc=Cyrl}} (1)
 * Vietnamese: {{t-check|vi|cục gạch}}
