t+gl:[[ministro]] ([[WT:EDIT|Assisted]]) <secretary#58166469>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -130,6 +130,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Esperanto: {{t|eo|sekretario}}
 * Finnish: {{t+|fi|ministeri}}
 * French: {{t+|fr|secrétaire}}
+* Galician: {{t|gl|ministro|m}}
 * Georgian: {{t|ka|მდივანი}}, {{t|ka|მინისტრი}}
 * German: {{t+|de|Staatssekretär|m}}
 * Greek: {{t+|el|υπουργός|m|f}}
