Undo revision 58178216 by [[Special:Contributions/Dine2016|Dine2016]] ([[User talk:Dine2016|talk]]) <昌#58178223>

--- a/en/昌/昌.16948.wikitext
+++ b/en/昌/昌.16948.wikitext
@@ -67,8 +67,11 @@
 ====Definitions====
 {{zh-hanzi}}
 
-# {{†}} {{zh-alt-form|倡|dot=,}} {{zh-used|昌導|to [[initiate]]; to [[propose]]|nocap=y}}
-# {{†}} {{zh-alt-form|唱|dot=,}} {{zh-used|昌誦|to [[chant]]; to [[recite]]|nocap=y}}
+# {{†}} {{zh-alt-form|倡|to [[initiate]]; to [[propose]]}}
+# {{†}} {{zh-alt-form|唱|to [[chant]]; to [[recite]]}}
+
+====Compounds====
+{{zh-der|昌導|昌誦}}
 
 ----
 
