/* Translations */ Added Ancient Egyptian translation of this word. <brick#58182971>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -112,6 +112,7 @@ From {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|dum|b
 * Dargwa: {{t|dar|кирпич}}
 * Dutch: {{t+|nl|baksteen|m}}
 * Dutch Low Saxon: {{t|nds-nl|keie}}
+* Egyptian: {{t-egy|ḏbt|h=Db-b-t:O39}}
 * Esperanto: {{t|eo|briko}}
 * Estonian: {{t|et|tellis}}
 * Faroese: {{t|fo|múrsteinur|m}}
