--- a/en/旰/旰.16920.wikitext
+++ b/en/旰/旰.16920.wikitext
@@ -30,13 +30,23 @@
 ====Definitions====
 {{zh-hanzi}}
 
-# [[sunset]]; [[dusk]]; [[evening]]
+# {{lb|zh|literary}} [[sunset]]; [[dusk]]; [[evening]]
 
 ====Compounds====
 {{zh-der|宵衣旰食|宵旰圖治|宵旰焦勞|宵旰憂勞|宵旰|旰食宵衣|旰食|皓旰|日旰|旰食之勞|日旰忘食}}
 
 ===Etymology 2===
-{{zh-see|旱|v}}
+
+====Pronunciation====
+{{zh-pron
+|m=hàn
+|cat=
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{†}} {{zh-only|旰旰|[[grand]]}}
 
 ----
 
