/* English */ <New Zealand#58193541>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -133,7 +133,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Mongolian: {{t|mn|Шинэ Зеланд|sc=Cyrl}}
 * Nahuatl: {{t|nah|Yancuīc Zetlālpan}}
 * Navajo: {{t|nv|Łeesdísí Bikéyah}}
-* Nepali: {{t|ne|न्युजिल्यान्ड|tr=nyujilyānḍ|sc=Deva}}
+* Nepali: {{t|ne|न्युजिल्यान्ड}}
 * Norman: {{t|nrf|Nouvelle Zélande|f}}
 * Norwegian:
 *: Bokmål: {{t+|nb|New Zealand}}, {{t|nb|Ny-Zealand}}
@@ -142,7 +142,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Oriya: {{t|or|ନିଉଜିଲ୍ୟାଣ୍ଡ}}
 * Paiwan: {{t|pwn|Autearua}}
 * Pashto: {{t+|ps|نيوزيلنډ}}, {{t|ps|نویزېلنډ|f|tr=nə́wayzelánḍ}}
-* Persian: {{t+|fa|نیوزیلند|tr=niyuzilend|sc=fa-Arab}}, {{t|fa|زلاند نو|tr=zelând-e nou|sc=fa-Arab}}, {{t|fa|زلاند جدید|tr=zelând-e jadid|sc=fa-Arab}}
+* Persian: {{t+|fa|نیوزیلند|tr=niyuziland|sc=fa-Arab}}, {{t|fa|زلاند نو|tr=zelând-e now|sc=fa-Arab}}, {{t|fa|زلاند جدید|tr=zelând-e jadid|sc=fa-Arab}}
 * Polish: {{t+|pl|Nowa Zelandia|f}}
 * Portuguese: {{t+|pt|Nova Zelândia|f}}
 * Punjabi: {{t|pa|ਨਿਊਜੀਲੈਂਡ|sc=Guru}}
@@ -172,7 +172,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Turkish: {{t+|tr|Yeni Zelanda}}
 * Turkmen: {{t|tk|Täze Zelandiýa}}
 * Ukrainian: {{t|uk|Нова́ Зела́ндія|f}}
-* Urdu: {{t|ur|نیوزی‌لینڈ|tr=n'yūzīlaṇḍ|sc=ur-Arab}}
+* Urdu: {{t|ur|نیوزی‌لینڈ|tr=nyūzīlaiṇḍ|sc=ur-Arab}}
 * Uyghur: {{t|ug|يېڭى زېلاندىيە}}
 * Uzbek: {{t+|uz|Yangi Zelandiya}}
 * Vietnamese: {{t|vi|Tân Tây Lan}} ({{t|vi|新西蘭|sc=Hani}})
