--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -194,7 +194,7 @@ From {{der|en|la|curvus|t=bent, curved}}.
 * French: {{t+|fr|courber}}
 * Georgian: {{t|ka|ღუნვა}}
 * German: {{t+|de|biegen}}, {{t+|de|verbiegen}}
-* Hindi: {{t+|hi|मोड़ना|tr=moṛnā}}
+* Hindi: {{t+|hi|मोड़ना}}
 * Irish: {{t|ga|cuar}}
 * Italian: {{t+|it|curvare}}
 {{trans-mid}}
