--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -270,7 +270,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 * Urdu: {{t|ur|کاٹنا|tr=kāṭnā}}
 * Venetian: {{t+|vec|tajar}}
 * Vietnamese: {{t+|vi|cắt}}
-* Waigali {{t|wbk|ćina}}
+* Waigali: {{t|wbk|ćina}}
 * Welsh: {{t+|cy|torri}}
 * ǃXóõ: {{t|nmn|gǂháá}}
 * Yaeyama: {{t|rys|切すん|tr=きぃすん, kïsun}}
