t+bg:[[промъквам се]] t+bg:[[изплъзвам се]] t+bg:[[полазват ме тръпки]] t+bg:[[траля]] ([[WT:EDIT|Assisted]]) <creep#58263693>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -113,6 +113,7 @@ From {{inh|en|enm|crepen}}, from {{inh|en|ang|crēopan||to creep, crawl}}, from 
 {{trans-bottom}}
 
 {{trans-top|to move in a stealthy or secret manner}}
+* Bulgarian: {{t|bg|промъквам се}}
 * Finnish: {{t+|fi|hiipiä}}, {{t+|fi|hivuttautua}}
 * Maori: {{t|mi|whakameto}}, {{t|mi|whakamomoka}}, {{t|mi|whakamoke}}, {{t|mi|whakatōkihi}}, {{t|mi|whakakoko}}
 {{trans-mid}}
@@ -122,6 +123,7 @@ From {{inh|en|enm|crepen}}, from {{inh|en|ang|crēopan||to creep, crawl}}, from 
 {{trans-bottom}}
 
 {{trans-top|to slip, or to become slightly displaced}}
+* Bulgarian: {{t|bg|изплъзвам се}}
 * Finnish: {{t+|fi|vetäytyä}}
 {{trans-mid}}
 * Russian: {{t+|ru|оплыва́ть|impf}}, {{t+|ru|оплы́ть|pf}}
@@ -134,6 +136,7 @@ From {{inh|en|enm|crepen}}, from {{inh|en|ang|crēopan||to creep, crawl}}, from 
 {{trans-bottom}}
 
 {{trans-top|to have a sensation as of insects creeping on the skin}}
+* Bulgarian: {{t|bg|полазват ме тръпки}}
 * Finnish: {{t+|fi|värisyttää}}, {{t|fi|[[aiheuttaa]] [[väristyksiä]]}}
 * Portuguese: {{t|pt|formigar}}
 {{trans-mid}}
@@ -141,6 +144,7 @@ From {{inh|en|enm|crepen}}, from {{inh|en|ang|crēopan||to creep, crawl}}, from 
 {{trans-bottom}}
 
 {{trans-top|to drag in deep water with creepers}}
+* Bulgarian: {{t|bg|траля}}
 * Finnish: {{t+|fi|naarata}}
 {{trans-mid}}
 {{trans-bottom}}
