t+ie:[[blond]] t-balance ([[WT:EDIT|Assisted]]) <blond#58274544>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -43,6 +43,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Greek: {{t+|el|ξανθός}}
 * Ido: {{t+|io|blonda}}
 * Indonesian: {{t+|id|pirang}}
+* Interlingue: {{t|ie|blond}}
 * Irish: {{t|ga|fionn}}
 {{trans-mid}}
 * Japanese: {{t|ja|[[金髪]]の|tr=きんぱつの, kinpatsu-no}}
@@ -82,8 +83,9 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Icelandic: {{t|is|ljóshærður}}
 * Ido: {{t+|io|blonda}}
 * Indonesian: {{t+|id|pirang}}
-{{trans-mid}}
+* Interlingue: {{t|ie|blond}}
 * Irish: {{t|ga|fionn}}, {{t|ga|barrbhuí}}, {{t|ga|foltbhuí}}, {{t|ga|buíbhán}}, {{t|ga|barrfhionn}}, {{t|ga|cúileann}}, {{t|ga|cúlbhán}}, {{t|ga|foltfhionn}}, {{t|ga|bánfholtach}}, {{t|ga|fionngheal}}, {{t|ga|moingfhionn}}, {{t+|ga|bán}}
+{{trans-mid}}
 * Italian: {{t+|it|biondo}}
 * Japanese: {{t+|ja|金髪|tr=kinpatsu}}
 * Khmer: {{t|km|សក់ទង់ដែង|tr=sɑk tʊəŋ daeŋ}}
