--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -61,6 +61,15 @@
 
 ----
 
+==Korean==
+
+===Hanja===
+{{ko-hanja|볕|양}}
+
+# {{hanja form of|양|[[sun]]; [[sunlight]]; [[sunshine]]; [[sunbeam]]}}
+
+----
+
 ==Vietnamese==
 
 ===Han character===
