t+ur:[[دام‎]] t+ur:[[قیمت‎]] t-balance ([[WT:EDIT|Assisted]]) <cost#58375507>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -241,8 +241,8 @@ From {{der|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to cost}}, see a
 * Hungarian: {{t+|hu|költség}}
 * Irish: {{t|ga|costas|m}}
 * Italian: {{t+|it|costo|m}}, {{t+|it|spesa|f}}
-{{trans-mid}}
 * Japanese: {{t+|ja|費用|tr=[[ひよう]], hiyō}}
+{{trans-mid}}
 * Khmer: {{t+|km|ថ្លៃ}}
 * Korean: {{t+|ko|비용}}
 * Kurdish:
@@ -272,6 +272,7 @@ From {{der|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to cost}}, see a
 * Turkish: {{t+|tr|masraf}}
 * Tuvan: {{t|tyv|өртек}}
 * Ukrainian: {{t|uk|кошт|m}}, {{t+|uk|ва́ртість|f}}
+* Urdu: {{t|ur|دام‎|m|tr=dām}}, {{t|ur|قیمت‎|f|tr=qīmat}}
 {{trans-bottom}}
 
 {{trans-top|negative consequence or loss}}
