--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -36,8 +36,7 @@ From {{der|en|fro|substance}}, from {{der|en|la|substantia|t=substance, essence}
 #: {{ux|en|a man of '''substance'''}}
 #* Bible, {{w|Gospel of Luke|Luke}} xv. 13
 #*: And there wasted his '''substance''' with riotous living.
-#* {{rfdatek|en|William Shakespeare}}
-#*: Thy '''substance''', valued at the highest rate, / Cannot amount unto a hundred marks.
+#*{{RQ:Shakespeare Comedy of Errors|act=I|scene=i|passage=Thy '''substance''', valued at the highest rate, / Cannot amount unto a hundred marks.}}
 #* {{rfdatek|en|Jonathan Swift}}
 #*: We are destroying many thousand lives, and exhausting our '''substance''', but not for our own interest.
 # A form of matter that has constant chemical composition and characteristic properties.
