t+fi:[[[[huippu|huippu-]]]] t-balance ([[WT:EDIT|Assisted]]) <plum#58470688>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -485,9 +485,10 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 {{trans-bottom}}
 
 {{trans-top|choice}}
+* Finnish: {{t|fi|[[huippu|huippu-]]}}
 * Spanish: {{t|es|selecto}}, {{t+|es|escogido}}
-* Swahili: {{t+|sw|zambarau}}
 {{trans-mid}}
+* Swahili: {{t+|sw|zambarau}}
 * Vietnamese: {{t+|vi|chọn lọc}}
 {{trans-bottom}}
 
