--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -97,7 +97,7 @@ From {{och-l|相|to observe; appearance}} (“appearance > to visualise > to thi
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=상}}
+{{ko-hanja|생각|상}}
 
 # {{rfdef|ko|sort=心09}}
 
