--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -103,7 +103,7 @@ From {{och-l|相|to observe; appearance}} (“appearance > to visualise > to thi
 ===Hanja===
 {{ko-hanja|생각|상}}
 
-# {{rfdef|ko|sort=心09}}
+# {{hanja form of|상|[[idea]], [[thought]]}}
 
 ----
 
