--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -164,8 +164,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 # The [[regurgitate]]d former contents of a [[stomach]]; [[vomitus]].
 # The act of regurgitating.
 # {{lb|en|obsolete}} That which causes vomiting; an [[emetic]].
-#* {{rfdatek|en|William Shakespeare}}
-#*: He gives your Hollander a '''vomit'''.
+#*{{RQ:Shakespeare Othello|act=II|scene=iii|passage=He gives your Hollander a '''vomit'''.}}
 
 ====Synonyms====
 * See also [[Thesaurus:vomit]].
